ルビの()を《》に変更

--- a/hardproblem/1-02.html
+++ b/hardproblem/1-02.html
@@ -29,7 +29,7 @@
 　子供の頃の記憶は、誰にだって宝物だ。たとえランドセルがキャラクターをあしらったリュックサックに変わっても、純粋だったあの頃の、世界がキラキラと輝いていたようなあの感じは、今も昔も変わらないのかもしれない。
 　そんなことを考えながら歩いていると、やがて公園に差し掛かった。
 　――<span class="simplified">真摇七号公园</span>／まゆらぎななごうこうえん
-　入口に設置された金属プレートには簡体の文字が刻まれている。ご丁寧にも平仮名が併記されているのは、まだ漢字も読めない子供への気遣いか、それとも簡体字に馴染みが薄かった世代への配慮か。おそらく両方だろう。すっかりくすんで輝きを失った真鍮は、さながら顔に刻まれた皺のように、自らが経てきた人生の長さを誇らしげに主張していた。このプレートが設置された詳細な時期を希海は知らないが、ここ<ruby>真揺<rp>(</rp><rt>まゆらぎ</rt><rp>)</rp></ruby>ニュータウンの街開きと同時だと仮定すれば、設置から軽く50年は経っている計算となる。
+　入口に設置された金属プレートには簡体の文字が刻まれている。ご丁寧にも平仮名が併記されているのは、まだ漢字も読めない子供への気遣いか、それとも簡体字に馴染みが薄かった世代への配慮か。おそらく両方だろう。すっかりくすんで輝きを失った真鍮は、さながら顔に刻まれた皺のように、自らが経てきた人生の長さを誇らしげに主張していた。このプレートが設置された詳細な時期を希海は知らないが、ここ<ruby>真揺<rp>《</rp><rt>まゆらぎ</rt><rp>》</rp></ruby>ニュータウンの街開きと同時だと仮定すれば、設置から軽く50年は経っている計算となる。
 　50年か、と希海は思う。それだけの歳月に耐えてなお、公園の名称表示という仕事をこなせているのなら、このプレートはずいぶんと立派だ。自分なんてこの10年間ですっかり変わってしまったというのに。
 　――10年。
 　気付けば遠くまで来たものだ。色々なことがあったはずだが、いざ振り返ってみると、一瞬の出来事のように思える。今の希海には、新しいゲームを買ってもらったときの胸の高鳴りも、いじめられっ子をかばう勇気も、誰かと駆けっこをする元気もない。10年という月日が風雨のように全てを摩耗させてしまった。代わりに得たものといえば、勇気とは反対方向に作用しがちな人生経験と頭でっかちな知識だけ。
@@ -42,7 +42,7 @@
 　人影が見えた。
 　別段、違和感を持つことはなかった。希海の頭は、『誰か居るな』とか『女の子かな』とか、そんな取るに足らないこと考えていたのだろう。まあいいや、と視線を外そうとした直後のことである。
 　人影が一瞬ゆらりと傾き、そのまま空高くから希海の方へと向かって一直線に降ってきた。
-　もちろん避けられなかった。両手に提げていたスーパーの袋が邪魔だったせいもあるが、人間、予想外の出来事にはなかなかどうして機敏な動作が行えないものである。避けられないならせめて受け止めようと思った希海だったが、2mちょっとの<ruby>高低差<rp>(</rp><rt>ポテンシャル</rt><rp>)</rp></ruby>が生み出す速度は案外馬鹿にならず、角運動量は無慈悲にもその総和が保存され、結果として希海のかかとを中心とした世にも危険な回転運動が始まるのだった。
+　もちろん避けられなかった。両手に提げていたスーパーの袋が邪魔だったせいもあるが、人間、予想外の出来事にはなかなかどうして機敏な動作が行えないものである。避けられないならせめて受け止めようと思った希海だったが、2mちょっとの<ruby>高低差<rp>《</rp><rt>ポテンシャル</rt><rp>》</rp></ruby>が生み出す速度は案外馬鹿にならず、角運動量は無慈悲にもその総和が保存され、結果として希海のかかとを中心とした世にも危険な回転運動が始まるのだった。
 　胸元にのしかかってくる体重に足元がふらつく。どこの誰だか知らない不注意な人物を上半身で受け止めたそのままの形で、希海は仰向けに倒れてしまう。赤と青と紫が複雑に絡み合ったまだら模様の夕焼け。3本1組の真っ黒な送電線が、上から下へと希海の視界を横切っていった。
 　――！！
 　アスファルトの地面に背中から叩きつけられる。体の後ろ半分に衝撃が走り、一瞬遅れて身悶えするほどの激痛がやってきた。うめき声すら出せずに必死に歯を食いしばる。頭を打たなかったのだけは不幸中の幸いだ。肘と背中と肩と、あとおしりも痛い。さすろうにも腕の数が足りなかった。
@@ -66,7 +66,7 @@
 「ぅ……うぅん……」
 　希海の胸に顔を突っ伏していた女の子……の姿をしたロボットがゆっくりと顔を上げる。
 　目が合った。
-　くりっとした真ん丸な瞳が不思議そうに希海を見据える。彼女の<ruby>眼<rp>(</rp><rt>まなこ</rt><rp>)</rp></ruby>は一見したところ人間のものと区別が付かないが、じっくりと観察すれば眼球の奥に七色の光沢が見えるはずだ。その正体は半導体素子の微細な表面加工が織り成す干渉縞。光学ディスクの裏面に浮かぶ虹と同じものである。
+　くりっとした真ん丸な瞳が不思議そうに希海を見据える。彼女の<ruby>眼<rp>《</rp><rt>まなこ</rt><rp>》</rp></ruby>は一見したところ人間のものと区別が付かないが、じっくりと観察すれば眼球の奥に七色の光沢が見えるはずだ。その正体は半導体素子の微細な表面加工が織り成す干渉縞。光学ディスクの裏面に浮かぶ虹と同じものである。
 「え……あれ……私……」
 　女の子はいまだ状況が理解できていない様子で周囲をきょろきょろと見回し始める。
 「大丈夫？　結構高いところから落ちてきたみたいだけど」
