--- a/hardproblem/1-04.html
+++ b/hardproblem/1-04.html
@@ -14,7 +14,7 @@
 
   <div class="contents">
 <div class="text">
-　青山希海は、生まれも育ちも<ruby>真揺<rp>(</rp><rt>まゆらぎ</rt><rp>)</rp></ruby>ニュータウンだ。上新台の市立病院で生を受け、小学校は<ruby>真浜区立第六小学校<rp>(</rp><rt>ロ　ク　シ　ョ　ウ</rt><rp>)</rp></ruby>、中学校は同じく区立の<ruby>第三中学校<rp>(</rp><rt>サ　ン　チ　ュ　ウ</rt><rp>)</rp></ruby>。高校だって近所にあって実家から通っていたし、現在希海が籍を置いている真浜大学も高校と同じ敷地にある。
+　青山希海は、生まれも育ちも<ruby>真揺<rp>《</rp><rt>まゆらぎ</rt><rp>》</rp></ruby>ニュータウンだ。上新台の市立病院で生を受け、小学校は<ruby>真浜区立第六小学校<rp>《</rp><rt>ロ　ク　シ　ョ　ウ</rt><rp>》</rp></ruby>、中学校は同じく区立の<ruby>第三中学校<rp>《</rp><rt>サ　ン　チ　ュ　ウ</rt><rp>》</rp></ruby>。高校だって近所にあって実家から通っていたし、現在希海が籍を置いている真浜大学も高校と同じ敷地にある。
 「遠慮せず上がってよ。狭いところだけど」
 　乱暴に靴を脱ぎ捨て希海は言った。狭いという言葉は謙遜でも何でもなく、実際にこの玄関では二人並んで靴紐が結べそうにない。
 「あ、はい。お邪魔します」
