--- a/hardproblem/1-05.html
+++ b/hardproblem/1-05.html
@@ -18,10 +18,10 @@
 （……もうこんな時間か）
 　希海はスボンのポケットから取り出した百円ライターでタバコに火を点ける。目を泳がせると時計の文字盤が見えた。壁に掛かった安物のアナログ式時計。その針は、あと少しで深夜0時に差し掛かろうかというところだった。
 （帰りどうしよう。ていうかここドコなんだろ……）
-　あの後、男の車が向かった先は、企業の研究所らしき施設だった。詳しい場所は分からない。もともとこの辺りは馴染みが薄い場所だし、何よりあのときの希海は焦っていて周りの景色をじっくり眺めている余裕などなかった。<ruby>中央環状線<rp>(</rp><rt>ちゅうかん</rt><rp>)</rp></ruby>を西に向かって走り、その後北に曲がったところまでは覚えているのだが、それ以降がさっぱりである。
+　あの後、男の車が向かった先は、企業の研究所らしき施設だった。詳しい場所は分からない。もともとこの辺りは馴染みが薄い場所だし、何よりあのときの希海は焦っていて周りの景色をじっくり眺めている余裕などなかった。<ruby>中央環状線<rp>《</rp><rt>ちゅうかん</rt><rp>》</rp></ruby>を西に向かって走り、その後北に曲がったところまでは覚えているのだが、それ以降がさっぱりである。
 （暮葉洞のあたりなのかな……）
 　どことも知れぬ場所の研究施設。だが、ひとつだけ希海が知っていることがある。
-　<ruby>上海人偶機器人工学<rp>(</rp><rt>　　S　　　　D　　　　R　　</rt><rp>)</rp></ruby><ruby>有限公司<rp>(</rp><rt>Co.Ltd.</rt><rp>)</rp></ruby>。
+　<ruby>上海人偶機器人工学<rp>《</rp><rt>　　S　　　　D　　　　R　　</rt><rp>》</rp></ruby><ruby>有限公司<rp>《</rp><rt>Co.Ltd.</rt><rp>》</rp></ruby>。
 　この研究所を所有する法人の名前だ。入り口の門に大きく名前が書かれているのを見たし、施設内でも社名の入ったポスターが貼られているのを何枚か見かけた。そして、あの子の二次元コードで見た製造情報にも、
 「あ……」
 　タバコの灰が重力に負けて崩れ落ちた。まだろくに吸っていないというのに。「しまった勿体ない」と言わんばかりに、希海はいそいそとタバコを咥えて煙を肺に入れる。今日だけで何本のタバコを無駄に灰に変えただろう。
@@ -50,16 +50,16 @@
 「じゃあどうして――」
 「とりあえず座ろう。長くなりそうだしな」
 　男は希海の言葉を断ち切ると、数ある椅子の中から自分に一番近いものを選んで腰掛けた。誰もいない深夜の待合室に椅子を引きずる音が響く。
-「そうだな。じゃあまず君が――そういえばまだ名前を聞いていなかったね。私は<ruby>東<rp>(</rp><rt>あずま</rt><rp>)</rp></ruby><ruby>克祥<rp>(</rp><rt>かつひろ</rt><rp>)</rp></ruby>。ここSDR近畿支店でテクニカルサポートの責任者をしている者でね。彼女のこともよく知っているよ。ところで、君の名前は？」
+「そうだな。じゃあまず君が――そういえばまだ名前を聞いていなかったね。私は<ruby>東<rp>《</rp><rt>あずま</rt><rp>》</rp></ruby><ruby>克祥<rp>《</rp><rt>かつひろ</rt><rp>》</rp></ruby>。ここSDR近畿支店でテクニカルサポートの責任者をしている者でね。彼女のこともよく知っているよ。ところで、君の名前は？」
 「青山希海です」
 「青山君か。大学生かね？」
 「いちおう……」
 　実際に学籍は存在するのだから、一応も何もれっきとした学生である。だが、もう長いこと学校に行ってない人間が大学生を名乗ることに、希海は何だか後ろめたいものを感じてしまい、かといって「不登校の引きこもりです」と正直に言うわけにもいかず、これらの葛藤が一応という言葉に表れている。
 「なるほど。大学では何を勉強しているのかな」
-「お、<ruby>精神科学<rp>(</rp><rt>オルゴノロジー</rt><rp>)</rp></ruby>を…………」
+「お、<ruby>精神科学<rp>《</rp><rt>オルゴノロジー</rt><rp>》</rp></ruby>を…………」
 「ほう」
 　希海の表情が少しだけ引きつった。だが、対する男――東は興味津々といった感じで目を輝かせる。
-「なるほど。<ruby>近畿直轄市<rp>(</rp><rt>こ　の　あ　た　り</rt><rp>)</rp></ruby>は基礎研究が盛んだからな。私は大学の頃に機械工学を専攻していたんだが、こっちに来てから<ruby>精神科学<rp>(</rp><rt>オルゴノロジー</rt><rp>)</rp></ruby>を勉強する機会があってね。いや、あんな難しいのを学生の頃から学んでるなんて大したもんだ。ちなみに今は何回生なのかな？　研究室配属は始まっているのかい？」
+「なるほど。<ruby>近畿直轄市<rp>《</rp><rt>こ　の　あ　た　り</rt><rp>》</rp></ruby>は基礎研究が盛んだからな。私は大学の頃に機械工学を専攻していたんだが、こっちに来てから<ruby>精神科学<rp>《</rp><rt>オルゴノロジー</rt><rp>》</rp></ruby>を勉強する機会があってね。いや、あんな難しいのを学生の頃から学んでるなんて大したもんだ。ちなみに今は何回生なのかな？　研究室配属は始まっているのかい？」
 「そんなことより、あ、あの子の話をですね！」
 「おっといかんいかん。私の悪い癖でね。いつも話を脱線させてしまうんだ。ええっと何の話だっけな……」
 　知るか。お前が何か言いかけたんだろう。何もないテーブルの上を見つめながら希海は心中で毒づく。
@@ -71,9 +71,9 @@
 　東は小さく頷き、何かを考える様子で右手を顎に当てる。どういう順番で話をすべきか考えているのだろう。
 「なるほど。じゃあまず君の挙げた三点について、こちらから補足をしておこう。まず一つ目」
 　そう言って東は人差し指をぴんと立てる。
-「彼女は確かにウチの会社の製品だ。<ruby>上海人偶機器人工学<rp>(</rp><rt>　　S　　　　D　　　　R　　</rt><rp>)</rp></ruby>サマリー17シリーズ第4世代の女性型。製品と言っても、まだ実証機としての意味合いが強くてね。少しばかり抜けているところが見受けられたかもしれない。余談だがウチの製品に限らず、多くのアンドロイドは盗難対策の一環として<ruby>全球定位系統<rp>(</rp><rt>GPS</rt><rp>)</rp></ruby>から得た位置情報をサーバーへ定期送信していてね。彼女の居場所を突き止めたのもこれを使ったというわけさ」
+「彼女は確かにウチの会社の製品だ。<ruby>上海人偶機器人工学<rp>《</rp><rt>　　S　　　　D　　　　R　　</rt><rp>》</rp></ruby>サマリー17シリーズ第4世代の女性型。製品と言っても、まだ実証機としての意味合いが強くてね。少しばかり抜けているところが見受けられたかもしれない。余談だがウチの製品に限らず、多くのアンドロイドは盗難対策の一環として<ruby>全球定位系統<rp>《</rp><rt>GPS</rt><rp>》</rp></ruby>から得た位置情報をサーバーへ定期送信していてね。彼女の居場所を突き止めたのもこれを使ったというわけさ」
 　やはりGPSか。希海の想像していた通りである。女の子と会ってから、ものの1時間程度で自宅の場所まで押さえられるなんておかしいと思っていた。
-「次に二つ目。記憶の欠損と意識障害について。一般的なアンドロイドの頭脳には<ruby>FIANC<rp>(</rp><rt>ファイアンク</rt><rp>)</rp></ruby>――<ruby>フラクタル集積人工神経回路<rp>(</rp><rt>Fractale Integrated Artificial Neuro-Circuit</rt><rp>)</rp></ruby>というニューラルプロセッサが使われている。もちろんサマリー17シリーズにも搭載されているんだが、ウチのは他社と少し違った特別仕様でね。オルゴンを利用して<ruby>神経<rp>(</rp><rt>ニューラル</rt><rp>)</rp></ruby>ネット内で大規模な<ruby>量子もつれ<rp>(</rp><rt>エンタングルメント</rt><rp>)</rp></ruby>を発生させる仕組みになっているんだが、いかんせんこれが熱に弱い。電子の<ruby>干渉性<rp>(</rp><rt>コヒーレンス</rt><rp>)</rp></ruby>が熱によって失われるからだ。もちろん、そうならないように普段は冷媒を使って温度を一定に保ってるんだが、この冷媒も放っておくとどんどん気化していって、そのうち回路内の熱を排出できなくなっていく。つまり長い間メンテを受けずにいるとオーバーヒートしてしまうというわけさ。熱によって<ruby>干渉破壊<rp>(</rp><rt>デコヒーレンス</rt><rp>)</rp></ruby>が発生すると記憶障害や意識障害が起きるからね」
+「次に二つ目。記憶の欠損と意識障害について。一般的なアンドロイドの頭脳には<ruby>FIANC<rp>《</rp><rt>ファイアンク</rt><rp>》</rp></ruby>――<ruby>フラクタル集積人工神経回路<rp>《</rp><rt>Fractale Integrated Artificial Neuro-Circuit</rt><rp>》</rp></ruby>というニューラルプロセッサが使われている。もちろんサマリー17シリーズにも搭載されているんだが、ウチのは他社と少し違った特別仕様でね。オルゴンを利用して<ruby>神経<rp>《</rp><rt>ニューラル</rt><rp>》</rp></ruby>ネット内で大規模な<ruby>量子もつれ<rp>《</rp><rt>エンタングルメント</rt><rp>》</rp></ruby>を発生させる仕組みになっているんだが、いかんせんこれが熱に弱い。電子の<ruby>干渉性<rp>《</rp><rt>コヒーレンス</rt><rp>》</rp></ruby>が熱によって失われるからだ。もちろん、そうならないように普段は冷媒を使って温度を一定に保ってるんだが、この冷媒も放っておくとどんどん気化していって、そのうち回路内の熱を排出できなくなっていく。つまり長い間メンテを受けずにいるとオーバーヒートしてしまうというわけさ。熱によって<ruby>干渉破壊<rp>《</rp><rt>デコヒーレンス</rt><rp>》</rp></ruby>が発生すると記憶障害や意識障害が起きるからね」
 　急に難しい話になってしまった。希海は慌てて頭の中を整理する。つまり、あの少女のコンピュータは演算に巨視的な量子効果を利用しているのだけれど、そのせいで熱に弱くて、長時間放置していると意識が途切れたり、記憶が欠落したりするということなのだろう。本当はもっとややこしい機構や物理過程が関わってくるのだろうが、今の希海にはその程度の理解で十分だと思えた。
 「少し専門的になってしまったが、大丈夫かな？」
 　必死に頭を動かしている様が伝わったのか、東は会話を中断して希海の思考が追いつくのを待ってくれていた。
@@ -122,7 +122,7 @@
 　――願わくば彼女が安らかな心持ちで眠りにつかんことを。
 　普段は神仏など信じない東だが、このときばかりはそう祈らずにはいられなかった。
 　その後、数日の時を経てハルカの廃棄が決定した。
-　最終メンテから既に2ヶ月ほどが経っていたため、彼女のデータはほとんど消えてしまっていると予測されていたし、何より所有者である父親がそのまま眠らせてやってくれと言っていた。息子に寄り添って事切れる彼女の姿に、両親としても思うところがあったのだろう。棺にはハルカの髪を<ruby>一房<rp>(</rp><rt>ひとふさ</rt><rp>)</rp></ruby>切り分けたものが入れられ、主人とともに一足先に天へと帰っていった。そして残されたハルカも、数週間後には系列会社の手によって解体されることが決まり、あとはうす暗い廃品置き場で滅びの時をただひたすらに待ち続けるはずだった。
+　最終メンテから既に2ヶ月ほどが経っていたため、彼女のデータはほとんど消えてしまっていると予測されていたし、何より所有者である父親がそのまま眠らせてやってくれと言っていた。息子に寄り添って事切れる彼女の姿に、両親としても思うところがあったのだろう。棺にはハルカの髪を<ruby>一房<rp>《</rp><rt>ひとふさ</rt><rp>》</rp></ruby>切り分けたものが入れられ、主人とともに一足先に天へと帰っていった。そして残されたハルカも、数週間後には系列会社の手によって解体されることが決まり、あとはうす暗い廃品置き場で滅びの時をただひたすらに待ち続けるはずだった。
 　そして、それからさらに数日後。
 　「廃品置き場からハルカが居なくなった」という報告を部下から受けたとき、東は耳を疑った。機能を停止したと思っていたロボットが蘇りひとりでに歩き出したというのでは、まるでゾンビではないか。最初は誰かが勝手にどこかへ移動させたのだと思い、廃品置き場をくまなく探したが一向に見つからない。
 　昼食を抜いて事業所内を端から端まで探し、まさか思って位置情報を検索してみて今度は我が目を疑った。ハルカの位置情報デバイスが動作しているのだ。モニタ上のカーソルが指し示す住所は真浜区真揺洞漸新台2丁目。事業所から直線距離にして6kmほど離れた場所である。
