--- a/hardproblem/1-06.html
+++ b/hardproblem/1-06.html
@@ -39,7 +39,7 @@
 　そう言って歩き出そうとする希海だが、東は立ち止まったまま動こうとしない。希海が声を掛けようと口を開きかけた瞬間。
 「タバコ、1本もらえるかね」
 　喫煙所に二人して入った。希海がズボンの後ろポケットからタバコを取り出すと、その赤一色のパッケージを見た東が「おっ」と声を上げた。
-「『<ruby><span class="simplified">红天演</span><rp>(</rp><rt>こうてんえん</rt><rp>)</rp></ruby>』とはずいぶん渋いね」
+「『<ruby><span class="simplified">红天演</span><rp>《</rp><rt>こうてんえん</rt><rp>》</rp></ruby>』とはずいぶん渋いね」
 「……ほっといて下さい」
 　西部解放まもない頃に販売が開始された、いわゆるオッサンタバコである。近頃では若い人はおろか年配の人ですら吸っているのを見かけないが。
 「どうぞ」
@@ -51,7 +51,7 @@
 　そしてその点において、東はとてもありがたい相手だった。こちらが発言せずとも勝手にべらべらと喋って、あれこれと質問をぶつけてくる。希海は特に何も考えず、ただ聞かれたことにだけ答えておけばいい。
 　だからこそ、この度の東の沈黙は希海の目にも、ものすごく特異なものに映った。
 「…………」
-　タバコを吸いながら横目でちらりと<ruby>窺<rp>(</rp><rt>うかが</rt><rp>)</rp></ruby>ってみる。東は火を点けたタバコに口を付けようとはせず、目をつぶったまま何かを考えている様子だった。
+　タバコを吸いながら横目でちらりと<ruby>窺<rp>《</rp><rt>うかが</rt><rp>》</rp></ruby>ってみる。東は火を点けたタバコに口を付けようとはせず、目をつぶったまま何かを考えている様子だった。
 　相手が目を閉じているのを良いことに、希海は東の顔をまじまじと凝視する。顔に刻まれた皺は案外深く、白髪の目立つ髪は前頭部がかなり後退していた。会話の最中に相手の胸元や手先を見る癖がある希海は、こうして陰から観察でもしなければ人の顔などろくに見ることがない。漠然と40代手前くらいかと思っていた目の前の男は、よくよく見ると50代くらいの顔つきをしていた。
 　！！
 　東が突然目を開いた。希海は慌てて視線をあさっての方向へと向ける。
@@ -64,28 +64,28 @@
 「そうか。ありがとう」
 「まだ、引き受けるとは言ってませんよ。私の手に余るような頼みならお断りさせてもらいますからね」
 「はははすまんすまん。そりゃそうか。内容も分からない頼みごとをほいほいと引き受けるヤツなんてそうそう居るわけない。いや、頼みというのは実はね――」
-　<ruby>飄々<rp>(</rp><rt>ひょうひょう</rt><rp>)</rp></ruby>とした東の態度とは裏腹に、その頼みごとは希海にとって重大な内容だった。
+　<ruby>飄々<rp>《</rp><rt>ひょうひょう</rt><rp>》</rp></ruby>とした東の態度とは裏腹に、その頼みごとは希海にとって重大な内容だった。
 「君に、彼女の新しいオーナーになってほしいと思っているんだ」
 　希海は言葉の意味をすぐには理解できなかった。彼女？　オーナー？　私が？　ひょっとしたら、自分の気付かないところで話題が変わってしまっていたのだろうか。
 　理解は、紙に垂らしたインクのように数秒遅れでやってきた。
 　――私があの子の、ハルカの新しい主人になる。
 　状況を理解した希海の頭に、洪水のような疑問が次々と湧いてくる。
 「な、なんで私が！？　貧乏学生にそんな大金ありませんよ！」
-「まあ落ち着きたまえ。君も知っての通り、彼女は少しばかり凄惨な過去を背負っていて、幸か不幸か当の本人はそのことをまったく覚えていない。だが、アンドロイドの脳たる<ruby>FIANC<rp>(</rp><rt>ファイアンク</rt><rp>)</rp></ruby>はそう単純ではなくてね。こいつは人間の脳と同じで、忘れていたことを突然思い出すことがたまにある。ネットワーク全体で情報を記憶しているニューラルプロセッサの特徴だな」
+「まあ落ち着きたまえ。君も知っての通り、彼女は少しばかり凄惨な過去を背負っていて、幸か不幸か当の本人はそのことをまったく覚えていない。だが、アンドロイドの脳たる<ruby>FIANC<rp>《</rp><rt>ファイアンク</rt><rp>》</rp></ruby>はそう単純ではなくてね。こいつは人間の脳と同じで、忘れていたことを突然思い出すことがたまにある。ネットワーク全体で情報を記憶しているニューラルプロセッサの特徴だな」
 　なるほど、人間の失われた記憶がふとしたきっかけで戻るならば、人間を高度に模した彼女にもそれが起こりうるというわけだ。しかし、
 「それがあの子を引き取る事とどういう関係があるんですか！？」
 「彼女が今後、新しい主人のもとで第二の人生を歩んだとしよう。もちろん、何事も無くそのまま幸せに暮らす可能性も大いにある。だが、ふとしたことで失っていた記憶を取り戻してしまったとしたらどうだろう？　ただでさえ、主人の自殺というショッキングな記憶だ。その上、自分が昔の主人のことなんて綺麗さっぱり忘れて、楽しく暮らしていたことを思い出したら？　新しい主人と心の中の古い主人との間で板挟みになったら？　……おそらく何らかの形で精神を病むだろうな。運が良ければ仕事が手につかないくらいで済むかもしれないが、それだって立派なリコール対象だ。最悪ニューロワームを介して閉律症を患う可能性さえありえる」
 　ニューロワームとは、オルゴン場を媒介して人の脳に住み着く情報病原体だ。鬱やストレスなど精神免疫力が落ちているときに感染しやすく、発症と同時に患者は眠ったままになってしまう。
-「そうでなくたって、普通の人は昔のオーナーの記憶を<ruby>快<rp>(</rp><rt>こころよ</rt><rp>)</rp></ruby>くは思わないだろう。彼女が問題なく仕事をこなしていたとしても、関係のこじれが何かしらのトラブルに発展するかもしれない」
+「そうでなくたって、普通の人は昔のオーナーの記憶を<ruby>快<rp>《</rp><rt>こころよ</rt><rp>》</rp></ruby>くは思わないだろう。彼女が問題なく仕事をこなしていたとしても、関係のこじれが何かしらのトラブルに発展するかもしれない」
 　思ってもみなかった話に希海は青ざめる。彼女は記憶を失っただけで、それ以外に何も問題はないのだと思っていた。いや、実際にその通りであり、記憶の欠落以外はまったくの正常だ。だが、その欠落した記憶こそが唯一にして最大の問題点だったのである。
 「では出荷をしないで、ここの施設で一生を過ごせるのかというとこれも難しい。アンドロイドの維持費はオーナー負担分だけでも最低月5万。潜在的に企業が負担している分まで含めるとこれの2から4倍だな。いくら世界に名だたるSDRといえども、こんな無駄な費用をポンと払ってくれるほど太っ腹じゃない。ちなみに多くのアンドロイドは無停止システムだから、電源を切って置いておくことはできんぞ。スイッチをOFFにした瞬間から排熱機構がストップして情報の揮発による脳死へと一直線だ」
 「……それで私ですか」
 「うむ。君は彼女の過去についてすでに知っているわけだからな。彼女が昔の記憶を思い出して、仕事が手に付かなくなったりしたとしても無下に扱うことはないだろう？　資金の面なら私が出すから心配はいらないよ。こう見えて結構稼いでいるんだが、いかんせん貧乏性で使う機会がなくてね。今ではタワーマンションのペントハウスが買えるくらいにまでに貯金が溜まってしまったよ。それに言葉は悪いがハルカは“中古品”だ。価格的には新品の半分以下だし、その上社員の私なら、割引価格で購入できる」
-　確かに東の言い分には理があるように思える。思えるが、希海がハルカのオーナーになるという帰結に至るには、まだ十分な<ruby>理屈<rp>(</rp><rt>ロジック</rt><rp>)</rp></ruby>があるとは言えない。
+　確かに東の言い分には理があるように思える。思えるが、希海がハルカのオーナーになるという帰結に至るには、まだ十分な<ruby>理屈<rp>《</rp><rt>ロジック</rt><rp>》</rp></ruby>があるとは言えない。
 「それなら、私よりもっと適した人がここいるじゃないですか」
 「ん？　私かい？」
 　そう。今までの話は要するに、彼女の過去を知っており彼女に理解を示す人物が、新しいオーナーになるべきだということだった。だったら、わざわざどこの馬の骨ともしらない希海よりも、この男が自ら彼女を買い上げて、オーナーになればいいではないか。
-「もちろんそれも考えたさ。だが私は多忙な身でね。中々彼女に構ってやれないんだ。一人暮らしで2日3日家に帰らないこともざらにあるような人間が主人だとアンドロイドがかわいそうだろ？　それに近頃、健康診断の結果が<ruby>芳<rp>(</rp><rt>かんば</rt><rp>)</rp></ruby>しくなくてね。何かの拍子でぽっくりと逝ってしまって、彼女を2度も同じ目に合わせたくない」
+「もちろんそれも考えたさ。だが私は多忙な身でね。中々彼女に構ってやれないんだ。一人暮らしで2日3日家に帰らないこともざらにあるような人間が主人だとアンドロイドがかわいそうだろ？　それに近頃、健康診断の結果が<ruby>芳<rp>《</rp><rt>かんば</rt><rp>》</rp></ruby>しくなくてね。何かの拍子でぽっくりと逝ってしまって、彼女を2度も同じ目に合わせたくない」
 　解せなかった。
 　もちろん希海とて頭では彼の話を理解している。だが、世界に100億人、ここ近畿市だけでも1800万近い人間がいるというのに、なぜ希海なのか。まるで自分だけ置いていかれたような気分だった。
 　1800万人の中から1人、また1人と抜けていき、最後に残ったのが希海と東だ。そしてその東も今しがた抜けてしまい、女の子に対する責任と使命感が希海の肩に重くのしかかる。
