--- a/hardproblem/1-07.html
+++ b/hardproblem/1-07.html
@@ -27,7 +27,7 @@
 　そんな考えが頭をよぎるが、もはや何を言っても手遅れだ。いや、厳密に言うと今からでも「やっぱやめた」と、無かったことにできるのかもしれない。だが、今更ちゃぶ台をひっくり返す度胸など希海にはありやしなかった。
 「青山君も分かっていると思うが、念のため確認しておこう。今のところ彼女が覚えているのは、廃品置き場から抜けだした後のことだけだ。それより前の記憶――以前の主人との間のことを彼女は覚えていない」
 　あくまでも今のところ、だ。ひょっとすると今後、何かの拍子で思い出すことがあるかもしれない。そのとき、希海は彼女にどんな言葉を投げかけてやれるのだろうか。
-「昔の記憶については彼女に話していないし、自分で思い出すまでは青山君も話さないようにしてくれ。ウチの会社にあるデータについて聞かれたら『保管期限が過ぎてしまってもう残っていない』とでも言っておくよ。君が彼女の新しいオーナーになったことについては……、そうだな『<ruby>FIANC<rp>(</rp><rt>ファイアンク</rt><rp>)</rp></ruby>の情報欠損に関する臨床研究のためで、君は研究の協力者として選ばれた何も知らない一般人』ということしよう。そして君が協力者に選ばれた理由はズバリ“縁”だ」
+「昔の記憶については彼女に話していないし、自分で思い出すまでは青山君も話さないようにしてくれ。ウチの会社にあるデータについて聞かれたら『保管期限が過ぎてしまってもう残っていない』とでも言っておくよ。君が彼女の新しいオーナーになったことについては……、そうだな『<ruby>FIANC<rp>《</rp><rt>ファイアンク</rt><rp>》</rp></ruby>の情報欠損に関する臨床研究のためで、君は研究の協力者として選ばれた何も知らない一般人』ということしよう。そして君が協力者に選ばれた理由はズバリ“縁”だ」
 　確認のはずだったのだが、思わぬ口裏合わせに話が発展してしまった。希海は東の言った言葉を頭の中で復唱する。ここをしっかり押さえておかないと、あとでとんでもないボロが出てしまう。何らかの理由で廃棄された彼女は、廃品置き場から逃げ出してきたところを間一髪で連れ戻された。長い間メンテを受けていなかったせいで昔の記憶が欠落していて、その内容は東ですら知らないし調べられない。一種の記憶喪失である彼女は貴重な研究対象であり、その協力者として彼女と縁のあった自分が里親に選ばれた。
 （ん、待てよ……？　そういえば）
 「名前はどうするんですか？」
