--- a/hardproblem/1-08.html
+++ b/hardproblem/1-08.html
@@ -18,7 +18,7 @@
 　その車の後部座席に座り、希海はぼんやりと窓の外を眺めていた。中央分離帯に建てられた街灯が時速75kmで車窓を横切っていく。周期性を伴って目の前を駆け抜けるナトリウムランプのオレンジ色はさながら催眠術か何かのようで、じっと見つめていると何も考えられなくなってくる気がした。
 　ちらりと横をのぞき見る。同じく後部座席に座ったロボットの女の子も、流れ行く景色をじっと見つめていた。その表情は車内の暗がりでよく分からない。
 （今からこの子と共同生活か）
-　こうして横顔を<ruby>窺<rp>(</rp><rt>うかが</rt><rp>)</rp></ruby>ってみても正直実感が湧かなかった。
+　こうして横顔を<ruby>窺<rp>《</rp><rt>うかが</rt><rp>》</rp></ruby>ってみても正直実感が湧かなかった。
 （名前、名前……）
 　今日中に決めると言ったはいいが、結局まだ何も浮かんでいない。車窓を眺めていれば何か思い付くだろうと思ったが、どうやら逆効果だったようだ。考えよう考えようという言葉だけが頭の表層を上滑りし、まともな案は何一つとして浮かんでこない。
 　もう明日でもいいかと希海は思う。今日中に決めると言ったが、もう日付が変わっているのだから、寝て起きてから決めたっていいだろう。いろいろなことがあって疲れた。今はとにかく寝たい。それだけだった。
@@ -39,7 +39,7 @@
 　女の子に肩をゆすられ、はっと目を覚ます。
 　周囲を見回すと車はハザードランプを焚いて停車をしていた。窓の外には見慣れたボロアパート。
 「あ、ごめん……」
-　どうやら<ruby>微睡<rp>(</rp><rt>まどろ</rt><rp>)</rp></ruby>んでしまっていたようだ。希海は左手で目をこすって頭を切り替える。
+　どうやら<ruby>微睡<rp>《</rp><rt>まどろ</rt><rp>》</rp></ruby>んでしまっていたようだ。希海は左手で目をこすって頭を切り替える。
 「ずいぶんと熟睡していたようだね。まあ無理もないか」
 　東が運転席からこちらを振り返っていた。
 「疲れただろう。マニュアルなんかの必要書類は後日送付するから、今晩はゆっくり休むといい。分からないことがあれば彼女自身に聞くか、不安なら私に電話してくれ」
@@ -49,7 +49,7 @@
 　希海は数秒ほど悩んだ末、左手に名刺を持ったままドアを開いて外に出た。地面に足を付けて立ち上がるとそれまでの眠気が一気に引いていく。
 「それじゃあ、彼女をよろしくな」
 　男は運転席からそう告げると、車をUターンさせてさっさと行ってしまった。テールランプの赤色が次第に小さくなっていく。車が角を曲がって見えなくなっても、希海はその場に立ち尽くしていた。
-　遠くに聞こえていたエンジン音が小さくなり夜の静寂に消えると、一気に日常が帰ってきた気がした。だが、ちらりと横を<ruby>窺<rp>(</rp><rt>うかが</rt><rp>)</rp></ruby>うと、そこにはロボットの女の子。きれいに切り揃えられた黒い髪が夜風にたなびいており、希海の視線に気付くとまるで子犬のようなきょとんとした表情を見せる。
+　遠くに聞こえていたエンジン音が小さくなり夜の静寂に消えると、一気に日常が帰ってきた気がした。だが、ちらりと横を<ruby>窺<rp>《</rp><rt>うかが</rt><rp>》</rp></ruby>うと、そこにはロボットの女の子。きれいに切り揃えられた黒い髪が夜風にたなびいており、希海の視線に気付くとまるで子犬のようなきょとんとした表情を見せる。
 「じゃ、じゃあとりあえず、部屋に戻ろっか」
 「はいっ」
 　非日常は、まだ続いていた。
@@ -66,7 +66,7 @@
 「はいっ。ちゃんと毎日寝ますよ。人間と同じです」
 　そして、その可能性も完膚なきまでに打ち砕かれてしまった。これで晴れて今晩は床決定である。女の子はそんな希海の絶望などつゆとも知らず、自信満々に
 「私、こう見えて結構よくできているんですよ。なんでも、毎晩寝ている最中に頭の中のデータを整理してるらしいんです」
-　ああ、つまりデフラグね。<ruby>FIANC<rp>(</rp><rt>ファイアンク</rt><rp>)</rp></ruby>とかいうこの子のプロセッサが本当にデフラグをしているのかどうかは知らないが、きっと似たような処理が行われているんだろうなと希海は思う。どうせならこの部屋に散らばった漫画本やゲームを<ruby>整理<rp>(</rp><rt>デフラグ</rt><rp>)</rp></ruby>してほしかった。
+　ああ、つまりデフラグね。<ruby>FIANC<rp>《</rp><rt>ファイアンク</rt><rp>》</rp></ruby>とかいうこの子のプロセッサが本当にデフラグをしているのかどうかは知らないが、きっと似たような処理が行われているんだろうなと希海は思う。どうせならこの部屋に散らばった漫画本やゲームを<ruby>整理<rp>《</rp><rt>デフラグ</rt><rp>》</rp></ruby>してほしかった。
 「はぁ、じゃあ今日はあんたがベッドに寝て。私は……そうね、あっちで寝ることにするから。よいしょっと」
 　部屋の隅でホコリを被っていた冬用の布団を抱え上げ玄関へと運ぶ。人一人が寝っ転がれるスペースはもはや玄関しかなかった。
 「えっ……」
@@ -82,7 +82,7 @@
 「私は自分が主人だなんてこれっぽっちも思ってないから」
 「えっ……」
 　女の子の表情がみるみると曇っていく。
-「あ、ご、ごめん。別にあんたのことが嫌いとか、そういう意味じゃなくてね。もちろん、これから上手くやっていきたいと思ってるんだけど、主人だとか<ruby>下僕<rp>(</rp><rt>しもべ</rt><rp>)</rp></ruby>だとか、そういうのどうも好きになれなくてさ。できるなら対等な関係でいたいって、そう考えてるわけ」
+「あ、ご、ごめん。別にあんたのことが嫌いとか、そういう意味じゃなくてね。もちろん、これから上手くやっていきたいと思ってるんだけど、主人だとか<ruby>下僕<rp>《</rp><rt>しもべ</rt><rp>》</rp></ruby>だとか、そういうのどうも好きになれなくてさ。できるなら対等な関係でいたいって、そう考えてるわけ」
 　言いながら、また格好つけてるなと希海は思った。セリフだけなら、人もロボットも分け隔てなく扱う聖人君子のように聞こえるが、その実、希海の中にあるのは“怯え”だ。
 　希海は自分のことが好きではない。
 　ここ数年、自分に対する嫌悪感と矮小感を持たなかった日など1日たりとも存在しなかった。どうして自分はいつもこうなのだろう。また今日も学校へ行けなかった。両親は、小学校のころの友達は、高校の頃の友達は、こんな自分を見たらどう思うんだろう。一体、自分はこれからどうなってしまうのだろう。
@@ -103,8 +103,8 @@
 「まだ寒い日もあるんですから、床なんかで寝たら風邪引いちゃいますよ。友達だったらなおさら放おっておけません」
 　こいつ意外と頑固だな、と希海は思う。ロボットだから柔軟な思考ができないのか、従者としての立場がそうさせるのか、はたまたこの子が特別そういう性格なのかはわからない。
 「大丈夫だって。1日くらい大したことないわよ。大体、ベッドがひとつしかないんだからどっちかが床で寝なきゃいけないでしょ」
-　そう。<ruby>ベッド<rp>(</rp><rt>リソース</rt><rp>)</rp></ruby>が<ruby>ひとつ<rp>(</rp><rt>有限</rt><rp>)</rp></ruby>である以上、絶対にどちらかが不利益を被らなければならないのは明白なのだ。だが女の子はそんな理屈など
-<ruby>端<rp>(</rp><rt>はな</rt><rp>)</rp></ruby>から知らぬと言った様子で力強くこう言った。
+　そう。<ruby>ベッド<rp>《</rp><rt>リソース</rt><rp>》</rp></ruby>が<ruby>ひとつ<rp>《</rp><rt>有限</rt><rp>》</rp></ruby>である以上、絶対にどちらかが不利益を被らなければならないのは明白なのだ。だが女の子はそんな理屈など
+<ruby>端<rp>《</rp><rt>はな</rt><rp>》</rp></ruby>から知らぬと言った様子で力強くこう言った。
 「ふたりでベッドを使いましょう」
 　希海は固まった。
 「…………」
@@ -129,13 +129,13 @@
 「す、すいません」
 　女の子が申し訳なさそうにうつむく。消防車かと見紛うほどの目もくらむ赤色のジャージ。背中には、黄色の樹脂ででかでかと校名がプリントされていた。いつ見てもひどいデザインだと希海は思う。
 「あんたが謝ることないって。ほら、さっさと布団に入る」
-　ベッドを指さして女の子を<ruby>急<rp>(</rp><rt>せ</rt><rp>)</rp></ruby>かした。
+　ベッドを指さして女の子を<ruby>急<rp>《</rp><rt>せ</rt><rp>》</rp></ruby>かした。
 　彼女を先に行かせたのは、自分が壁から遠い方で寝るためである。1週間も風呂に入っていないのはさすがに嘘だが、希海の寝相が悪いのは本当だ。寝ている最中に女の子を床に突き落としてしまったら目も当てられない。
 　女の子がそろそろと布団に入り、希海もそれに続く。やはり少しばかり狭いが今更気にしてもいられない。
 「じゃあ、電気消すよ」
 「はい」
-　リモコンのスイッチを押すと、帰ってきたときと同じ暗闇が部屋に広がった。まだ暗がりに慣れていない視界に光の残像が幾何学模様となって浮かび上がる。ゆっくりと形状を変化させてゆく光の残像。まるで<ruby>蠢<rp>(</rp><rt>うごめ</rt><rp>)</rp></ruby>くアメーバだ。
-　はたして、この子も同じ模様を見ているのだろうか。希海は背中の向こう、わずか数cmの<ruby>間隙<rp>(</rp><rt>かんげき</rt><rp>)</rp></ruby>と薄っぺらい衣服を隔てた先にいる少女を意識した。
+　リモコンのスイッチを押すと、帰ってきたときと同じ暗闇が部屋に広がった。まだ暗がりに慣れていない視界に光の残像が幾何学模様となって浮かび上がる。ゆっくりと形状を変化させてゆく光の残像。まるで<ruby>蠢<rp>《</rp><rt>うごめ</rt><rp>》</rp></ruby>くアメーバだ。
+　はたして、この子も同じ模様を見ているのだろうか。希海は背中の向こう、わずか数cmの<ruby>間隙<rp>《</rp><rt>かんげき</rt><rp>》</rp></ruby>と薄っぺらい衣服を隔てた先にいる少女を意識した。
 （これからどうなるんだろう……）
 　女の子の過去に思いを馳せると、希海の中で一抹の不安がかま首をもたげる。自ら命を断ったという前のオーナーの話。その人との生活を楽しそうに話していた女の子。遺体に寄り添って事切れていた姿。
 （ハルカ、か）
@@ -150,7 +150,7 @@
 「あんたの名前」
 「リコ……ですか？」
 　寝返りでも打っているのだろうか。女の子はもぞもぞと小さな体をせわしなく動かし、そのたびに肩や肘が何度も希海の体に当たった。
-「うん。<ruby>理<rp>(</rp><rt>ことわり</rt><rp>)</rp></ruby>の子って書いてリコ。理は理工学とか心理学の理。科学の子っていう意味よ」
+「うん。<ruby>理<rp>《</rp><rt>ことわり</rt><rp>》</rp></ruby>の子って書いてリコ。理は理工学とか心理学の理。科学の子っていう意味よ」
 　リコ……、リコ……。
 　女の子は答えず、響きを確かめるように何度もその名を繰り返す。
 「嫌なら言ってくれていいよ。また考えればいいんだからさ」
