--- a/hardproblem/2-01.html
+++ b/hardproblem/2-01.html
@@ -18,7 +18,7 @@
     </div>
 
 <div class="text">
-　あまりの眩しさに目が覚めた。カーテン越しにぼんやりと見える太陽の輪郭。分厚い布地を突き抜けてなお力強さを失わない強烈な<ruby>光の束<rp>(</rp><rt>フラックス</rt><rp>)</rp></ruby>が、外の世界の快晴を物語っていた。
+　あまりの眩しさに目が覚めた。カーテン越しにぼんやりと見える太陽の輪郭。分厚い布地を突き抜けてなお力強さを失わない強烈な<ruby>光の束<rp>《</rp><rt>フラックス</rt><rp>》</rp></ruby>が、外の世界の快晴を物語っていた。
 （夢……か）
 　夏の熱線の前では、薄っぺらい安物のカーテンなど何の意味もなさない。サウナの中で汗だくになりながら走る夢を見た気がする。
 「あつ……」
@@ -46,7 +46,7 @@
 「ごめん私ああいうの無理、生理的に無理」
 　希海はリモコンを片手にせわしなくチャンネルを回していく。だが民放はどこも下世話な芸能ニュースばかりで中々チャンネルが定まらない。
 「ああもう、これでいいや」
-　結局、<ruby>国営放送<rp>(</rp><rt>J　C　T　V</rt><rp>)</rp></ruby>にチャンネルを固定した。地味な芸能人が地味な観光地を歩いて回るだけの、毒にも薬にもならないような旅番組。
+　結局、<ruby>国営放送<rp>《</rp><rt>J　C　T　V</rt><rp>》</rp></ruby>にチャンネルを固定した。地味な芸能人が地味な観光地を歩いて回るだけの、毒にも薬にもならないような旅番組。
 「はぁ〜。地上波はホント下らないわねえ。衛星放送とかに加入してればこういうときに便利なんだろうなあ」
 「入らないんですか？　衛星放送」
 「アパート自体が加入してないからなあ……。管理人さんに頼むのも何だか気が引けるし」
