--- a/hardproblem/2-02.html
+++ b/hardproblem/2-02.html
@@ -14,10 +14,10 @@
 
   <div class="contents">
 <div class="text">
-　ベッドタウンとしての色彩が強い<ruby>真揺<rp>(</rp><rt>まゆらぎ</rt><rp>)</rp></ruby>ニュータウンにあって、昼間でも人通りが絶えない繁華な場所が存在する。
+　ベッドタウンとしての色彩が強い<ruby>真揺<rp>《</rp><rt>まゆらぎ</rt><rp>》</rp></ruby>ニュータウンにあって、昼間でも人通りが絶えない繁華な場所が存在する。
 　地区センター。
 　いわゆる駅前である。真揺ニュータウンには北・中央・南の3ヶ所に地区センターが存在し、それぞれが各地区の商業・交通の拠点となっている。中でも真揺中心駅の周囲に広がる中央地区センターはとりわけ規模が大きく、駅周辺にはショッピングモールや百貨店・オフィスなどが集積している。
-　そして、その中央地区センターの一角。<ruby>地鉄<rp>(</rp><rt>メトロ</rt><rp>)</rp></ruby>の改札を出て階段を登ったすぐのところにあるガラス張りの小洒落た店舗の前にふたりは立っていた。
+　そして、その中央地区センターの一角。<ruby>地鉄<rp>《</rp><rt>メトロ</rt><rp>》</rp></ruby>の改札を出て階段を登ったすぐのところにあるガラス張りの小洒落た店舗の前にふたりは立っていた。
 「…………」
 　行き交う人々の往来を背に、リコはガラスの向こう側を物珍しそうに眺めている。
 「うーん」
@@ -47,7 +47,7 @@
 　その言葉につられて希海も上空に視線を移してみる。どこまでも続いているかのような真っ青な空に、真新しい飛行機雲が帯を引いていた。6月も末となれば空の表情はすっかり夏のそれだ。最近できた家電量販店の向こうでは、山のような大きさにまで成長した積乱雲がこちらをのぞき込んでいる。
 「ああー嫌だなあ。もうすぐ夏かあ」
 「希海さんは夏、嫌いですか？」
-「嫌い。暑いし汗かくし<ruby>目眩<rp>(</rp><rt>めまい</rt><rp>)</rp></ruby>はするし頭は痛くなるし、もう最悪。私は冬の方が好きかな」
+「嫌い。暑いし汗かくし<ruby>目眩<rp>《</rp><rt>めまい</rt><rp>》</rp></ruby>はするし頭は痛くなるし、もう最悪。私は冬の方が好きかな」
 「うーん……私はあまり冬は好きじゃないですね。夏の方がいいです」
 　真っ白な床面が太陽光をギラギラと反射する。容赦のない照り返しに目を細めながらも希海は内心意外に思っていた。見た目だけで判断するなら、清楚で大人しそうなリコはいかにも冬が好きそうなイメージだ。それにこの子のプロセッサは熱に弱いのではなかったか。　
 「夏ねえ。冬派の端くれとして聞きたいんだけどさ、どこがいいわけ？」
@@ -72,7 +72,7 @@
 　整然と立ち並ぶ壁のような本棚とそこに鎮座する多種多様な本たち。ある者は人目を引くタイトルと装丁で自らの存在を声高に主張し、またある者は同じ姿形をした仲間と共に群れの力を誇示している。まるで熱帯雨林のような本の樹海。そのさなかにぽつんと一人の女の子が立っていた。
 　本棚の谷間に立ち尽くし、紙の中に広がる世界を必至に目で追うリコ。その手に持たれた本は普通の本より少し大きめであり、遠目に見てA5サイズといったところだろうか。
 　何を読んでいるのだろう、と希海は思った。活字にしてはページをめくるのが速すぎるし、漫画にしては遅すぎる。足音を殺して忍び寄ってみると、自分でも驚くほど簡単に背後まで歩を進めることができた。希海の存在に気づいていないリコは、無防備な背中を晒して手元の本に食い入ったままだ。しばし呼吸をやめ、背伸びをして本の内容を覗いてみる。
-　小さく呼吸を繰り返す細い肩とその向こう側の紙面。光沢紙が天井の蛍光灯を映し込むその先には、一面の青い世界が広がっている。いや、正確に言うと一面ではない。ページの上部にはちぎれた<ruby>綿毛<rp>(</rp><rt>わたげ</rt><rp>)</rp></ruby>のような白い雲がいくつも見えるし、下部には真っ白な砂浜も描かれている。これは……。
+　小さく呼吸を繰り返す細い肩とその向こう側の紙面。光沢紙が天井の蛍光灯を映し込むその先には、一面の青い世界が広がっている。いや、正確に言うと一面ではない。ページの上部にはちぎれた<ruby>綿毛<rp>《</rp><rt>わたげ</rt><rp>》</rp></ruby>のような白い雲がいくつも見えるし、下部には真っ白な砂浜も描かれている。これは……。
 「写真集？」
 　突然の呼びかけにリコがわっ、と驚きの声を上げて振り返る。
 「もうっ、びっくりさせないでくださいよ」
@@ -123,14 +123,14 @@
 「これはちょっと見てただけですから。買ってもらう本はもう決まってます」
 　本屋を出た後もふたりは地区センターを歩き回って買い物を続けた。もともと予定はしていなかったものの、リコの夏服を買ったり、電器屋で扇風機を品定めしたり、喫茶店でのんびり過ごしたりしていると、あっという間に数時間が経ってしまう。
 　帰りのバスを降りると、辺りはすっかり夕暮れの喧騒に包まれていた。遠くに聞こえる車のエンジン音や風呂場の水音。戸建住宅の軒先には夕飯の匂いが漂っており、時折テレビの音が通りに漏れ出ている。東の空からはインディゴの夜が時々刻々と染み出してきており、アパートの階段からは小さく光る一番星が見えた。
-「ああ、<ruby>疲<rp>(</rp><rt>つっか</rt><rp>)</rp></ruby>れたぁ」
+「ああ、<ruby>疲<rp>《</rp><rt>つっか</rt><rp>》</rp></ruby>れたぁ」
 　扉を開けるやいなや、希海は靴を脱ぎっぱなしにして部屋に飛び込む。慣れた場所に帰ってくると、体中の緊張が一気にほどけてゆく気がした。
 「今日は色んなところ行きましたからね」
 　散らばった靴を丁寧に揃えてから、リコが部屋に入ってきた。
 「まあでも、これくらいでへこたれてちゃダメよ。何せ来月には海に行くんだからね。う、み」
 「ふふっ、楽しみですね」
 「そうねえ。でも海に行くとなると今日よりもっと歩くしだろうし、向こうでも遊びまわるからもっと疲れるわよ。大丈夫？」
-「希海さんこそ大丈夫ですか。長い間大学行ってないんですよね。体、けっこう<ruby>鈍<rp>(</rp><rt>なま</rt><rp>)</rp></ruby>ってません？」
+「希海さんこそ大丈夫ですか。長い間大学行ってないんですよね。体、けっこう<ruby>鈍<rp>《</rp><rt>なま</rt><rp>》</rp></ruby>ってません？」
 「あ……うん。そうね……」
 　嫌なことを思い出させやがって。
 　不登校と留年。リコには知られたくない事実だったが、一つ屋根の下で暮らしている以上、隠し通そうと思えばそれなりに労力が必要になる。共同生活の開始からほどなくして、希海は二択を迫られることになった。すなわち不登校の事実を正直に告白するか、失職したサラリーマンのように公園で時間をつぶしてでも隠し通すかである。
@@ -149,7 +149,7 @@
 　リコの両手には小さな日記帳があった。子供向けアニメのキャラクターのあしらわれたそれは、どう見ても小学生向けのものである。15歳にしてはいささか幼い代物だが、無邪気な笑顔を浮かべる今のリコにはとてもよく似合っていた。
 「あっ、何か書くものあります？」
 「シャーペンでいい？」
-　希海からシャープペンシルを受け取ると、リコは机の前に座って日記帳を広げた。かつてはラップトップ1台がぎりぎり置けるくらいの散らかりようだったこの机も、リコが片付けてくれたお陰で随分とスペースにゆとりができた。床に散らばっていた本の<ruby>類<rp>(</rp><rt>たぐい</rt><rp>)</rp></ruby>だって今は綺麗に本棚に収められている。
+　希海からシャープペンシルを受け取ると、リコは机の前に座って日記帳を広げた。かつてはラップトップ1台がぎりぎり置けるくらいの散らかりようだったこの机も、リコが片付けてくれたお陰で随分とスペースにゆとりができた。床に散らばっていた本の<ruby>類<rp>《</rp><rt>たぐい</rt><rp>》</rp></ruby>だって今は綺麗に本棚に収められている。
 （何だかんだ言ってちゃんと仕事やってるなあ）
 　希海は、以前よりもずっときれいになった自室と手元のレシピ本を交互に眺めた。料理のレパートリーがちょっと少ないとは言え、掃除も洗濯もこの子は立派にこなしている。
 （私もちゃんとしないと……）
@@ -171,12 +171,12 @@
 「…………秘密です」
 「いいじゃない、ちょっとくらい見せてくれたって。減るもんじゃなしに」
 「だーめーです」
-　誰だって自分の日記なんて見られたくはないのだろう。だがここまで<ruby>頑<rp>(</rp><rt>かたくな</rt><rp>)</rp></ruby>に隠されるとどうしても見てやりたくなる。
+　誰だって自分の日記なんて見られたくはないのだろう。だがここまで<ruby>頑<rp>《</rp><rt>かたくな</rt><rp>》</rp></ruby>に隠されるとどうしても見てやりたくなる。
 「わーったわよ。じゃあ目閉じとくから、その間に好きなだけ書いてちょうだい。はいどうぞ！」
 「……薄目あけてますよね」
 　希海は小さく舌打ちをした。
 「もーうっ！　だからだめですって。あっち行っといてください！」
-　強引に部屋の隅まで押し返された。よほど信用されていないのか、机に向かったリコはペンを走らせながらもチラチラと希海の方を<ruby>窺<rp>(</rp><rt>うかが</rt><rp>)</rp></ruby>ってくる。この調子では<ruby>三度<rp>(</rp><rt>みたび</rt><rp>)</rp></ruby>忍び寄るのは無理そうだ。不信をあらわにした視線が少し痛い。
+　強引に部屋の隅まで押し返された。よほど信用されていないのか、机に向かったリコはペンを走らせながらもチラチラと希海の方を<ruby>窺<rp>《</rp><rt>うかが</rt><rp>》</rp></ruby>ってくる。この調子では<ruby>三度<rp>《</rp><rt>みたび</rt><rp>》</rp></ruby>忍び寄るのは無理そうだ。不信をあらわにした視線が少し痛い。
 　やがて納得のいくものが書き上がったのが、リコは『できたっ』と小さくつぶやき、日記帳を持ってすくりとその場で立ち上がる。
 「じゃあ希海さん。少しの間だけ外に出ておいてもらえますか」
 「何で」
