--- a/hardproblem/2-04.html
+++ b/hardproblem/2-04.html
@@ -29,7 +29,7 @@
 「どわっ！」
 　突然の大声に周りの海水浴客が振り返る。希海は思わず尻餅を付いてしまっていた。
 「えへへー。意外とすばしっこかったんで捕まえるのに苦労しちゃいました」
-　まるで子猫を捕まえたときのような口調だった。だがその手中で<ruby>蠢<rp>(</rp><rt>うごめ</rt><rp>)</rp></ruby>くのは、猫とは程遠い外観をした見るもおぞましい7対の節足。手にした物体の意味をまるで理解していない無邪気な笑顔に希海は凍りつく。キチガイに刃物。そんな言葉が頭をよぎった。
+　まるで子猫を捕まえたときのような口調だった。だがその手中で<ruby>蠢<rp>《</rp><rt>うごめ</rt><rp>》</rp></ruby>くのは、猫とは程遠い外観をした見るもおぞましい7対の節足。手にした物体の意味をまるで理解していない無邪気な笑顔に希海は凍りつく。キチガイに刃物。そんな言葉が頭をよぎった。
 「どうしたんですか？　ほら、よく見てくださいよ」
 「ちょっと、やっやめ、」
 　あまりの恐怖で上手く声が出せない。肺に溜まった空気はだらしなく口から漏れ出ていく一方で、一向に喉を震わすことができずにいる。立ち上がって逃げようにも足に力が入らなかった。そんな希海の恐怖を知ってか知らずか、フナムシを手にしたリコは悪魔のように幼い笑顔でこちらへにじり寄ってくる。
@@ -43,7 +43,7 @@
 「ちょっとそこ座れ」
 　青空の下でお説教が始まった。
 　体育座りをするリコの前に立ち、希海は切々と自らの主張をリコに説いていく。あんな気持ち悪いものを手に持ってはいけない。リコは怖いとか気持ち悪いとか思わなくても、多くの人は虫に生理的嫌悪感を抱くものだ。ましてやそれを人の眼前に突きつけるなど言語道断の所業。
-　一方のリコは、ぽかんとした表情で弁舌を振るう希海の姿を見上げていた。どうやら虫が気持ち悪いという感覚が理解できないらしく、希海が何を言っても『そうなんですか？』と言わんばかりの生返事をよこしてくる。この調子では何を言っても<ruby>暖簾<rp>(</rp><rt>のれん</rt><rp>)</rp></ruby>に腕押しだ。加えて周囲は気温30°Cを超す炎天下。最初はノリノリで説教をしていた希海も次第に気力を削がれていき、10分ほど経ったところで、ついにさじを投げてしまった。
+　一方のリコは、ぽかんとした表情で弁舌を振るう希海の姿を見上げていた。どうやら虫が気持ち悪いという感覚が理解できないらしく、希海が何を言っても『そうなんですか？』と言わんばかりの生返事をよこしてくる。この調子では何を言っても<ruby>暖簾<rp>《</rp><rt>のれん</rt><rp>》</rp></ruby>に腕押しだ。加えて周囲は気温30°Cを超す炎天下。最初はノリノリで説教をしていた希海も次第に気力を削がれていき、10分ほど経ったところで、ついにさじを投げてしまった。
 「はぁ…………。とにかく、これからは変な虫に触らないこと。分かった？」
 「は、はい。わかりました」
 「分かればよし。ところで喉乾かない？　泳ぐ前に何か飲みたいな」
@@ -86,7 +86,7 @@
 　大学の知人だった。
 　背筋に冷たいものが走り、希海の心臓の鼓動が大きくなっていく。
 「久しぶり。青山さんも遊びに来たの？」
-　頭上には<ruby>燦々<rp>(</rp><rt>さんさん</rt><rp>)</rp></ruby>と輝く真夏の太陽。寄せては返す波の音がビーチを包み込む。白い砂浜と、その上で思い思いの時間を過ごす数えきれない人達。必死で小山を築き上げようとする子供とそれを微笑ましそうに見守る両親。楽しそうに水を掛け合う若者。すべてが完璧だったはずなのに。すべてが計画通りだったはずなのに。
+　頭上には<ruby>燦々<rp>《</rp><rt>さんさん</rt><rp>》</rp></ruby>と輝く真夏の太陽。寄せては返す波の音がビーチを包み込む。白い砂浜と、その上で思い思いの時間を過ごす数えきれない人達。必死で小山を築き上げようとする子供とそれを微笑ましそうに見守る両親。楽しそうに水を掛け合う若者。すべてが完璧だったはずなのに。すべてが計画通りだったはずなのに。
 「最近どう？　元気してた？」
 　水着姿の女の子が微笑みかける。朗らかで人当たりの良さそうな笑顔。遠まわしな質問が希海の胸に突き刺さった。
 「た、竹見さんも……遊びに来たんだ……」
@@ -124,12 +124,12 @@
 　耐え切れずに、足元の砂をめちゃくちゃに引っかき回す。爪の間に砂粒が食い込み指先が赤く腫れ上がったが、そんなものよりも胃の奥で暴れまわる吐き気と、肺を圧迫する動悸の方が何十倍も苦しい。この苦痛から救ってくれるなら、もはや誰でもいいとさえ思える。それが神なら喜んで懺悔しよう。もし悪魔なら命だって差し出す。何だっていい。この嗚咽と後悔の牢獄から、一刻も早く自分を開放してほしい。
 　不意に、誰かが砂を踏みしめる音がした。
 　その音はまるで気配を消そうとしているかのように、一歩一歩ゆっくりとこちらへ向かってくる。数歩進むと足音はほどなくして止まり、岩場はふたたび波の音に支配された。
-　何度も何度も、岩にあたっては砕け散る波のリズム。足音の主は、まるで何かを<ruby>躊躇<rp>(</rp><rt>ためら</rt><rp>)</rp></ruby>っているかのように、その場に止まったまま一向に動き出そうとしない。
+　何度も何度も、岩にあたっては砕け散る波のリズム。足音の主は、まるで何かを<ruby>躊躇<rp>《</rp><rt>ためら</rt><rp>》</rp></ruby>っているかのように、その場に止まったまま一向に動き出そうとしない。
 「……探しましたよ」
 　小さな声がした。少しばかりの幼さが残る、もうすっかり聞き慣れてしまった声。だがそこに、いつもの無邪気さは見られない。
 「あの……大丈夫ですか」
 　かたわらにはリコが立っていた。塩気を含んだ南風が、きれいな黒髪をさらさらと持ち上げる。まだ一度も水に濡れていないワンピースの水着と、すっかり溶けてしまったふたつのかき氷。
-　惨めな泣き顔は見られたくなかった。希海は涙を拭いながら顔を背ける。ちらりと<ruby>窺<rp>(</rp><rt>うかが</rt><rp>)</rp></ruby>ったリコの背後には、太陽に照らされた白い砂浜が見えた。光を反射してきらきらと輝く砂粒と、どこまでも続いているかのような青い空。ついさっきまで希海もあの場所にいたというのに、今ではまるで別世界のように喧騒が遠く聞こえる。
+　惨めな泣き顔は見られたくなかった。希海は涙を拭いながら顔を背ける。ちらりと<ruby>窺<rp>《</rp><rt>うかが</rt><rp>》</rp></ruby>ったリコの背後には、太陽に照らされた白い砂浜が見えた。光を反射してきらきらと輝く砂粒と、どこまでも続いているかのような青い空。ついさっきまで希海もあの場所にいたというのに、今ではまるで別世界のように喧騒が遠く聞こえる。
 　帰りたい。
 　希海はそう思った。
 　大学の知人が歩いているかと思うと、怖くてビーチなど歩けない。太陽も海ももうたくさんだ。今はただひたすらに帰りたい。波の音が聞こえないあの部屋に。誰かの目を気にする必要のない一人きりの世界に。
