--- a/hardproblem/2-05.html
+++ b/hardproblem/2-05.html
@@ -14,7 +14,7 @@
 
   <div class="contents">
 <div class="text">
-　<ruby>特急列車<rp>(</rp><rt>インターシティ</rt><rp>)</rp></ruby>がトンネルを抜ける。車窓には、大きく広がる真っ青な海。来たときよりも太陽が傾いているせいか、水面が反射する光にはわずかな赤みが混ざっていた。
+　<ruby>特急列車<rp>《</rp><rt>インターシティ</rt><rp>》</rp></ruby>がトンネルを抜ける。車窓には、大きく広がる真っ青な海。来たときよりも太陽が傾いているせいか、水面が反射する光にはわずかな赤みが混ざっていた。
 「…………」
 　ふたりの間に言葉はなかった。希海は微動だにせずに足元をじっと見つめており、リコもそんな希海に気を使ってか、ボックス席の反対側に座ったまま窓の外を見つめて何も話そうとしない。車内に響くのは、モーターの低い唸り声とレールの音だけ。
 　何も考えたくなかった。
@@ -38,11 +38,11 @@
 「最初は単に夜ふかしして朝起きれなかっただけ。でもそれが何日も続くとだんだんと行きづらくなって……。明日行こうとか、来週行こうとか思い続けてる間に、気づけば1年以上が過ぎてた」
 　一方のリコは何も言わずに、ただじっと吐き出される希海の言葉に耳を傾けている。瞳の中の虹が悲しそうに揺らめいていた。
 「単位が揃ってるとか、秋から行くだなんてみんな嘘っぱち。自分勝手に学校サボって遊びに行って、遊びに行った先で知り合いに出会って、自分勝手に落ち込んでるの」
-　秘めていた思いは、さながら毒のようなものだったのだろう。さらけ出してしまえば何てことはない。言葉を吐き捨てるほどに、体の中が軽くなっていくのを感じた。これでもう格好を付けなくて済む。よく見られたいとか、期待を裏切りたくないとか、そういう<ruby>諸々<rp>(</rp><rt>もろもろ</rt><rp>)</rp></ruby>の重荷を投げ捨ててしまえば、少し楽になれる気がした。
+　秘めていた思いは、さながら毒のようなものだったのだろう。さらけ出してしまえば何てことはない。言葉を吐き捨てるほどに、体の中が軽くなっていくのを感じた。これでもう格好を付けなくて済む。よく見られたいとか、期待を裏切りたくないとか、そういう<ruby>諸々<rp>《</rp><rt>もろもろ</rt><rp>》</rp></ruby>の重荷を投げ捨ててしまえば、少し楽になれる気がした。
 「ね、馬鹿みたいでしょ？　自分の都合に、周りの人やあんたを巻き込んで一人でこうして泣き言こぼしてるの。ほんと最低よ……」
 　玉突きのように次々と言葉が溢れてくる。それは、自分を責める言葉であると同時に、救いを求める声だったのかもしれない。
 「分かったでしょ。今日のことは全部私が悪いの。だから、私のことなんて気遣う必要はない。リコに気遣ってもらう資格なんて私には、これっぽちもないのよ……」
-　最後まで言い切ると、また涙が浮かんできた。何かあるたびに、こうして泣いてしまう自分が希海は嫌いだった。悪いのは自分なのに、涙を流して被害者を気取るずる賢さが、うずくまって自己憐憫に<ruby>浸<rp>(</rp><rt>ひた</rt><rp>)</rp></ruby>ろうとする身勝手さが、どうしようもなく嫌だった。
+　最後まで言い切ると、また涙が浮かんできた。何かあるたびに、こうして泣いてしまう自分が希海は嫌いだった。悪いのは自分なのに、涙を流して被害者を気取るずる賢さが、うずくまって自己憐憫に<ruby>浸<rp>《</rp><rt>ひた</rt><rp>》</rp></ruby>ろうとする身勝手さが、どうしようもなく嫌だった。
 「……でも」
 　列車がカーブを曲がり、窓から太陽の光が差し込んでくる。
 「でも、希海さんは泣いています」
