--- a/hardproblem/3-01.html
+++ b/hardproblem/3-01.html
@@ -50,7 +50,7 @@
 　リコが固まった。
 「え……。えっと、後ろっていうのは……」
 「何言ってんのよ。荷台に決まってんじゃない。さっさと帰らないと本格的に降ってくるわよ。台風近づいてるらしいし」
-　自転車の荷台を指して<ruby>促<rp>(</rp><rt>うなが</rt><rp>)</rp></ruby>すもリコは微動だにしない。どうやら先程派手に転んでしまったことがあってか、ふたり乗りに恐怖感を抱いているようだった。希海があれこれ説得しても、リコ一向に首を縦に振ろうとはせず、雨粒がその大きさを増していき無視できないほどになっても、まだリコは自転車の後ろに乗ることを承諾しようとはしなかった。
+　自転車の荷台を指して<ruby>促<rp>《</rp><rt>うなが</rt><rp>》</rp></ruby>すもリコは微動だにしない。どうやら先程派手に転んでしまったことがあってか、ふたり乗りに恐怖感を抱いているようだった。希海があれこれ説得しても、リコ一向に首を縦に振ろうとはせず、雨粒がその大きさを増していき無視できないほどになっても、まだリコは自転車の後ろに乗ることを承諾しようとはしなかった。
 　そして希海が折れた。
 　折れたというより、悠長に話をしていたら雨が本格的に降りだしてしまい、リコを説得する理由がなくなってしまったという方が正しいのだが。
 「か、帰ってこれた……」
