--- a/hardproblem/3-02.html
+++ b/hardproblem/3-02.html
@@ -14,8 +14,8 @@
 
   <div class="contents">
 <div class="text">
-　翌日、近畿市の広域が台風の直撃に見舞われていた。暴風の影響によりモノレールは全線で運転見合わせ。希海とリコはかろうじて動いていた<ruby>地鉄<rp>(</rp><rt>メトロ</rt><rp>)</rp></ruby>と<ruby>郊鉄<rp>(</rp><rt>KCR</rt><rp>)</rp></ruby>を乗り継ぎ、SDRのサポートセンターへと足を運ぶことにした。
-　最寄りである郊鉄の<ruby>暮葉<rp>(</rp><rt>くれは</rt><rp>)</rp></ruby>駅からサポートセンターまでは、いくらか歩かねばならない。普段の天候なら多少面倒くさい思いをするだけですむ距離なのだが、この日は台風である。強風の中、傘を斜めに差して歩くふたりの間に会話はなかった。
+　翌日、近畿市の広域が台風の直撃に見舞われていた。暴風の影響によりモノレールは全線で運転見合わせ。希海とリコはかろうじて動いていた<ruby>地鉄<rp>《</rp><rt>メトロ</rt><rp>》</rp></ruby>と<ruby>郊鉄<rp>《</rp><rt>KCR</rt><rp>》</rp></ruby>を乗り継ぎ、SDRのサポートセンターへと足を運ぶことにした。
+　最寄りである郊鉄の<ruby>暮葉<rp>《</rp><rt>くれは</rt><rp>》</rp></ruby>駅からサポートセンターまでは、いくらか歩かねばならない。普段の天候なら多少面倒くさい思いをするだけですむ距離なのだが、この日は台風である。強風の中、傘を斜めに差して歩くふたりの間に会話はなかった。
 （今日もまた濡れるのか……）
 　傘を用意してきたとは言え、台風の前では焼け石に水である。強風によって斜めに運ばれる雨が、希海のデニムをみるみると湿らせていく。この調子だと帰る頃にはずぶ濡れだろう。昨日みたいに、帰ってすぐ熱い風呂に飛び込もう。そう決意した希海の脳裏に、つい先日の出来事が蘇ってきた。
 　湯気で白く煙る浴室と、ほっそりとしたリコの肢体。悪ふざけで体をまさぐり、足を開けさせた先にあったものを見て希海は我が目を疑った。
@@ -24,7 +24,7 @@
 「…………」
 　希海は透明のビニール傘越しに、隣を歩くリコの様子を窺ってみる。傘を濡らす水滴のせいでその表情はよく見えないものの、吹き付ける風と必死に戦っていることは見て取れた。
 　なぜリコにそんなものがついているのか。
-　希海にはその理由が全く分からなかった。いくら最先端技術を集めて作られたアンドロイドとは言え、生殖機能が実装されているなんて聞いたことがない。そればかりか、生殖機能を人工的に再現すること自体が、未だなされていないはずだ。人工授精もクローン技術も最終的には母親の子宮で胎児を育てなければならないし、ましてやリコはロボット。形質をどうやって交配可能な<ruby>塩基配列<rp>(</rp><rt>シークエンス</rt><rp>)</rp></ruby>に落としこむのか。卵細胞の培養はどうするのか。受精ができたところで、胎児をどうやって育てるのか。人工生殖技術の確立に向けて解決しなければならない課題は山積みであろう。
+　希海にはその理由が全く分からなかった。いくら最先端技術を集めて作られたアンドロイドとは言え、生殖機能が実装されているなんて聞いたことがない。そればかりか、生殖機能を人工的に再現すること自体が、未だなされていないはずだ。人工授精もクローン技術も最終的には母親の子宮で胎児を育てなければならないし、ましてやリコはロボット。形質をどうやって交配可能な<ruby>塩基配列<rp>《</rp><rt>シークエンス</rt><rp>》</rp></ruby>に落としこむのか。卵細胞の培養はどうするのか。受精ができたところで、胎児をどうやって育てるのか。人工生殖技術の確立に向けて解決しなければならない課題は山積みであろう。
 　――詭弁だ。
 　不意に、心の奥底の声が告げた。そうだ。希海だって本当は知っている。知っていながら、あえて分からないふりをしているだけなのだ。女性器には“子供を作る以外の使い道”もあるということを。
 　傘を掴む手が震えた。
@@ -69,11 +69,11 @@
 「ほらほらー。こういうとこでも練習よ。言ったでしょ？　『他人に説明ができるようになって初めて理解したと言える』って」
 　希海は夏以来、リコに勉強を教えてやっている。当初はいつまで続くかわからないと思っていたが、今のところは特にフェードアウトの気配もなく順調に進んできている。継続が苦手な希海がここまで続けてこられたのも、ひとえに毎日欠かさずに教科書を開くリコのおかげだった。
 　リコはしどろもどろになりながら、つい数週間前に勉強した生物物理学の内容を説明する。口調こそたどたどしかったものの、その中身は概ね的を射たものであった。
-「はい。その通り。リコも言った通り、オルゴンってのは電磁気力や重力なんかと同じで、この宇宙を形作る基本的な相互作用のひとつなわけね。んで、人に限らず多くの生物の脳はオルゴンで満たされている。ニューロワームっていうのは、このオルゴンを……正確に言うとオルゴンの<ruby>場<rp>(</rp><rt>フィールド</rt><rp>)</rp></ruby>を媒介して、人の脳に寄生する病原体みたいなものなの」
+「はい。その通り。リコも言った通り、オルゴンってのは電磁気力や重力なんかと同じで、この宇宙を形作る基本的な相互作用のひとつなわけね。んで、人に限らず多くの生物の脳はオルゴンで満たされている。ニューロワームっていうのは、このオルゴンを……正確に言うとオルゴンの<ruby>場<rp>《</rp><rt>フィールド</rt><rp>》</rp></ruby>を媒介して、人の脳に寄生する病原体みたいなものなの」
 「病原体……細菌とかですか？」
 「そう。ただ細菌との違いは、実体が無いっていこと。細菌は元をたどれば原子や分子、素粒子の集まりだけど、ニューロワームはそうじゃない。ニューロワームの本体はオルゴン場に刻まれた情報なの。でもそれ以外は細菌をはじめとする微生物と同じ。代謝・自己複製・境界という生物の3要件もしっかりと満たしてるわ」
 「なんだかコンピュータウィルスみたいですね」
-「ご名答。実際にニューロワームっていう名前は、マルウェアのワームから採られてるのよ。<ruby>神経細胞<rp>(</rp><rt>ニューロン</rt><rp>)</rp></ruby>に寄生するワームってとこね」
+「ご名答。実際にニューロワームっていう名前は、マルウェアのワームから採られてるのよ。<ruby>神経細胞<rp>《</rp><rt>ニューロン</rt><rp>》</rp></ruby>に寄生するワームってとこね」
 「ふふっ。さすが希海さん、色んなこと知ってますね」
 「ま、まあ、一応専門だし……」
 　そう言って、希海は一抹の虚しさを覚えた。この程度の表層的な知識なら、あるレベル以上の教育を受けたものなら誰でも知っている。大学というのは本当に怖ろしいところで、スボトニック型ニューロワームの宿主共生おける突然変異だとか、強磁場中におけるヤング配位則の変化だとか、準粒子を介したオルゴン場と物質の相互作用だとか、そんな途方もなく専門的で高度なことを研究している人間が星の数ほどいるのだ。スーパーで買い物をしている主婦相手ならともかく、大学でこんな知識を得意げに披露したところで失笑を買うだけである。
@@ -91,8 +91,8 @@
 「患者の頭に“潜って”直接引っ張りだすのよ」
 「え……。えっとそれは……」
 　希海の言ったことがよく理解できないのだろう。リコは眉間に皺を寄せた。無理もない。現実的で泥臭い作業だが、表面だけを切り取れば、それはまるで映画か何かだ。
-　現在行われている閉律症の治療は精神医学用語でルーミング、法律用語で特定精神医療と呼ばれている。その内容を一言で表せば、『患者の脳と作業者の脳を接続し、患者の精神空間に入り込んで直接連れ戻す』というものだ。連れ戻しが<ruby>滞<rp>(</rp><rt>とどこお</rt><rp>)</rp></ruby>りなく進行するか、一悶着起こるのかは患者による。『帰りましょう』と言って素直に応じる患者もいれば、『ここから出たくない』とごねる者だって少なくない。そして呼びかけに応じない患者は、もっぱら作業者による力ずくで連れ戻されることになっていた。
-　不意に<ruby>蝶番<rp>(</rp><rt>ちょうつがい</rt><rp>)</rp></ruby>の軋む音がした。レストルームに満ちていた静寂が破られる。
+　現在行われている閉律症の治療は精神医学用語でルーミング、法律用語で特定精神医療と呼ばれている。その内容を一言で表せば、『患者の脳と作業者の脳を接続し、患者の精神空間に入り込んで直接連れ戻す』というものだ。連れ戻しが<ruby>滞<rp>《</rp><rt>とどこお</rt><rp>》</rp></ruby>りなく進行するか、一悶着起こるのかは患者による。『帰りましょう』と言って素直に応じる患者もいれば、『ここから出たくない』とごねる者だって少なくない。そして呼びかけに応じない患者は、もっぱら作業者による力ずくで連れ戻されることになっていた。
+　不意に<ruby>蝶番<rp>《</rp><rt>ちょうつがい</rt><rp>》</rp></ruby>の軋む音がした。レストルームに満ちていた静寂が破られる。
 　希海とリコが音の方を振り返ると、そこにはよく知った男の姿があった。東はふたりの姿を確認すると、そのまま小走りでこちらへと駆け寄ってくる。
 「待たせてばかりですまんね。それでメンテナンスの方なんだが……まだまだ時間が掛かりそうだ。せっかく来てもらったところを申し訳ないが、今日は一旦帰った方がいいだろう」　
 「わかりました。じゃあまた今度来ますね」
