--- a/hardproblem/3-04.html
+++ b/hardproblem/3-04.html
@@ -20,7 +20,7 @@
 　ここは小春の家の近所が元になって作られている場所らしい。目に留まった風景のひとつひとつを丁寧に説明していく内に、小春はすっかり元気を取り戻してくれたように見えた。
 「あははっ。分かる分かる」
 　けたけたと笑いながら話をする希海。こちらの時間で出会ってからまだ30分ほどしか経っていないが、既に小春とは旧知の仲のように自然に会話ができた。やはり一度喧嘩をした相手には遠慮がなくなるのだろうか。歳の差も手伝って、まるで弟ができたような感覚に陥る。
-「昔、学校の近くにトラ猫が住んでてさ。一緒にいた友達二人にはよく<ruby>懐<rp>(</rp><rt>なつ</rt><rp>)</rp></ruby>くんだけど私がなでようとしたら、いつもフゥーッ！ って」
+「昔、学校の近くにトラ猫が住んでてさ。一緒にいた友達二人にはよく<ruby>懐<rp>《</rp><rt>なつ</rt><rp>》</rp></ruby>くんだけど私がなでようとしたら、いつもフゥーッ！ って」
 　そんな風に話を弾ませながらあてもなく歩いていると、やがて開けた場所に出た。片側1車線の小さな国道と、それに並走する線路。フェンスの向こうに大きな海が見える。
 　小春が駆け出した。
 　希海も慌てて後を追う。フェンスをよじ登って線路をまたぐ。バラストに足を取られ、つんのめりながら向こう岸のフェンスにしがみつき、小さな網目に靴をねじ込んで再びよじ登る。
@@ -92,7 +92,7 @@
 　小春の抱えている問題は、言いにくいことなのかもしれない。聞いたって希海なんかにはどうにもならないことかもしれない。でもひょっとしたら……。ひょっとしたら小春を悩ませる問題は、希海にだって何とかできることなのかもしれない。希海だけじゃない。事情を話せばリコだってきっと協力してくれる。それで駄目なら東に話を持ちかけたっていい。だから――――
 「……すいません」
 　足元を見つめたままの小春が、申し訳なさそうに謝罪を述べた。その言葉が、これ以上の追求を打ち切るものだということは明らかだ。
-　希海は一抹の無力感に襲われる。考えてみれば当たり前のことだった。知り合って一時間ほどしか経っていない人間に、ワームに感染するほどの大きな悩みを打ち明けるなんてあるはずがない。希海が小春の立場だったとしても同じように口を<ruby>噤<rp>(</rp><rt>つぐ</rt><rp>)</rp></ruby>んだはずだ。
+　希海は一抹の無力感に襲われる。考えてみれば当たり前のことだった。知り合って一時間ほどしか経っていない人間に、ワームに感染するほどの大きな悩みを打ち明けるなんてあるはずがない。希海が小春の立場だったとしても同じように口を<ruby>噤<rp>《</rp><rt>つぐ</rt><rp>》</rp></ruby>んだはずだ。
 「でも……」
 　顔を上げた小春は何かを諦めたような、どこか寂しげな表情を浮かべていた。
 「でもやっぱりそうですよね。青山さんの言うとおりです。黙っていちゃ何も変わらない。思ったことは伝えないといけない。今なら何の疑いもなく、そう思えます。だから……」
@@ -124,13 +124,13 @@
 「しかと見よっ！　私の必殺技っ！」
 　小春に向かって勢いよく投げた。
 　はたからその様子を見ても、ただ石を投げただけのように思えるだろう。何の変哲もない単なる投石だ。
-　だがその石は、空間を漂う数百本の矢によって“押されて”いる。矢の大半は速度と同じ方向で作用し、石に莫大な運動エネルギーを与える。残りの数十本は石を垂直に押し、軌道を調整するためのガイドだ。さながら<ruby>線形加速器<rp>(</rp><rt>ライナック</rt><rp>)</rp></ruby>である。希海の指を離れた石は瞬く間に速度を増し、弾丸と見紛うばかりのスピードで小春の肩口に浮かぶ地球儀を撃ちぬいた。　
+　だがその石は、空間を漂う数百本の矢によって“押されて”いる。矢の大半は速度と同じ方向で作用し、石に莫大な運動エネルギーを与える。残りの数十本は石を垂直に押し、軌道を調整するためのガイドだ。さながら<ruby>線形加速器<rp>《</rp><rt>ライナック</rt><rp>》</rp></ruby>である。希海の指を離れた石は瞬く間に速度を増し、弾丸と見紛うばかりのスピードで小春の肩口に浮かぶ地球儀を撃ちぬいた。　
 　鉄板を叩いたときのような固く鋭い轟音。
 　地球儀が砕け散った。
 　その破片はまるで雫のように透明で、夕日に照らされミラーボールのようにキラキラと輝いている。
 「じゃあねー！　頑張るのよーっ！」
 　最後に精一杯の大声で、希海は叫んだ。
-　<ruby>核<rp>(</rp><rt>カーネル</rt><rp>)</rp></ruby>が破壊されると、閉ざされた世界がみるみるとほころびていく。平衡感覚が消え失せ自分の姿勢が分からなくなり、意識が急速に朦朧としていく。
+　<ruby>核<rp>《</rp><rt>カーネル</rt><rp>》</rp></ruby>が破壊されると、閉ざされた世界がみるみるとほころびていく。平衡感覚が消え失せ自分の姿勢が分からなくなり、意識が急速に朦朧としていく。
 　曖昧な記憶と白く濁る視界。
 　そのなかで小春が何かを叫んでいるのを希海は見た。
 　声は聞こえない。いや、本当は聞こえていたのだが希海が認識できなかっただけかもしれない。だが彼が最後に言った言葉は、しっかりと希海に伝わっている。
