--- a/hardproblem/4-02.html
+++ b/hardproblem/4-02.html
@@ -42,8 +42,8 @@
 「…………」
 　こほん、とひとつ咳払い。まあいい。これを機に社会のなんたるかをリコに教えてやろうと希海は思う。
 「えっとねリコさん。……いや、同志リコよ。クリスマスっていうのはね――」
-　そして希海は、リコにクリスマスのなんたるかを切々と説き始めた。曰く、クリスマスとは元々キリスト教圏の風習であって元来仏教国である日本にとっては文化的な異物であり、まして現在この国は<ruby> 唯 物 論 <rp>(</rp><rt>マテリアリズム</rt><rp>)</rp></ruby>を標榜する共産主義国である。つい数十年前まではこんな大々的にクリスマスが祝われることはなかった。ではなぜ短期間でこれほどまでにこの忌まわしき文化が定着したのか。それはひとえに改革開放政策があったからだ。つまりクリスマスとは走資派のお祭りなのである。現に街を見渡してみよ。クリスチャンでもない人間がサンタの格好をして威勢よく商品を売りつけようとしているではないか。この国におけるサンタとは隙あらば人民を搾取しようと企てる資本主義の走狗であり、我々日本人民は今一度建国時の理想に立ち返らなければならない。
-「そしてこのような時代には<ruby> 疫 病 <rp>(</rp><rt>プレイグ</rt><rp>)</rp></ruby>が流行り、<ruby>拝金主義<rp>(</rp><rt>マ　モ　ン</rt><rp>)</rp></ruby>が横行し、<ruby> 芸 術 <rp>(</rp><rt>ミューズ</rt><rp>)</rp></ruby>は衰退するのよ。大体、クリスマスなんて子供とカップルしか楽しめな……、ま、まあこの話はいいとして。とにかく、クリスマスなんかにかまけてちゃダメなの。わかりましたかっ！？」
+　そして希海は、リコにクリスマスのなんたるかを切々と説き始めた。曰く、クリスマスとは元々キリスト教圏の風習であって元来仏教国である日本にとっては文化的な異物であり、まして現在この国は<ruby> 唯 物 論 <rp>《</rp><rt>マテリアリズム</rt><rp>》</rp></ruby>を標榜する共産主義国である。つい数十年前まではこんな大々的にクリスマスが祝われることはなかった。ではなぜ短期間でこれほどまでにこの忌まわしき文化が定着したのか。それはひとえに改革開放政策があったからだ。つまりクリスマスとは走資派のお祭りなのである。現に街を見渡してみよ。クリスチャンでもない人間がサンタの格好をして威勢よく商品を売りつけようとしているではないか。この国におけるサンタとは隙あらば人民を搾取しようと企てる資本主義の走狗であり、我々日本人民は今一度建国時の理想に立ち返らなければならない。
+「そしてこのような時代には<ruby> 疫 病 <rp>《</rp><rt>プレイグ</rt><rp>》</rp></ruby>が流行り、<ruby>拝金主義<rp>《</rp><rt>マ　モ　ン</rt><rp>》</rp></ruby>が横行し、<ruby> 芸 術 <rp>《</rp><rt>ミューズ</rt><rp>》</rp></ruby>は衰退するのよ。大体、クリスマスなんて子供とカップルしか楽しめな……、ま、まあこの話はいいとして。とにかく、クリスマスなんかにかまけてちゃダメなの。わかりましたかっ！？」
 「えーっ……」
 　リコは全然納得していなかった。頬を膨らましてふてくされる様子は文字通り、クリスマスの中止を告げられた子供のそれだった。
 「えーじゃありません」
