--- a/hardproblem/4-03.html
+++ b/hardproblem/4-03.html
@@ -29,7 +29,7 @@
 　小さくジャンプ。足の甲が微かにチェーンに触れ、じゃらりと小さく音をたてる。本来ならこんな低いハードル飛びに引っかかる希海ではなかったが、マフラーを介して繋がっているリコのことを思うと、あまり大げさな動きはできなかった。
 　そして着地。つんのめることも大きな音を立てることもなく、羽毛が落ちるときのように爪先からふわりと地面に降り立つ。チェーンに触れてしまったのは減点対象だが、着地に関しては危なっかしさの全くない綺麗な動きだったと自分でも思う。
 「ほらリコも」
-　そして希海はくるりと振り返るとポケットから手を出し、そのまま<ruby>　掌　<rp>(</rp><rt>たなごころ</rt><rp>)</rp></ruby>を上に向けて差し出した。
+　そして希海はくるりと振り返るとポケットから手を出し、そのまま<ruby>　掌　<rp>《</rp><rt>たなごころ</rt><rp>》</rp></ruby>を上に向けて差し出した。
 「え、えっと……」
 　リコは不安そうな顔を見せたまま固まってしまった。何かを逡巡している様子が手に取るように分かる。勝手に入っていいのかなとか、おそらくそんなことを考えているのだろう。だがその思案もつかの間、少女はやがて決心したかのように恐る恐るその手を掴むと、希海の真似をするようにゆっくりと膝を持ち上げてみせる。
 「えいっ！」
@@ -42,7 +42,7 @@
 　多分、このチェーンを乗り越えたことは、ふたりにとっての繋がりなのだ。共に禁忌を破るという繋がり。見つかったら怒られるかもしれない様な後ろめたいことを、ふたりで共有する。公園の暗がりを一歩進むごとに、夜風に体の熱が奪われるたびに、言葉にあらわせない何かが胸の奥で高ぶるのを希海は感じた。そうだ。こういうときは、いつも不思議と寒さを感じないのだ。小学生のとき、親に内緒で家を抜けだした夜のことを思い出す。今日みたいに冬の寒い頃だったというのに、その空気の冷たさが心地よかった。
 　公園を歩くふたりの足取りは軽く、あの頃から何一つ変わらぬ夜の空気は冷たく静かだ。ところどころ雑草の生えた小道は背の高い雑木林に挟まれて真っ暗で、闇に沈んだ木々の頭上では、遠くの街明かりに照らされた夜空が薄橙色に輝いている。
 「さ、寒いですね」
-　隣を歩くリコが身震いをした。手を口に近づけ、はぁと小さく温める。<ruby>靄<rp>(</rp><rt>もや</rt><rp>)</rp></ruby>のように白い呼気が夜の静寂に溶けてゆく。
+　隣を歩くリコが身震いをした。手を口に近づけ、はぁと小さく温める。<ruby>靄<rp>《</rp><rt>もや</rt><rp>》</rp></ruby>のように白い呼気が夜の静寂に溶けてゆく。
 「そうかな？　でも歩いていると結構温まってこない？」
 「うう……ぜんぜんですよ。私達ロボットはちょっとやそっと歩いたくらいじゃ暖かくならないんです」
 　――私達ロボットは
@@ -51,7 +51,7 @@
 「あ、でも」
 「でも？」
 「すっごく沢山走ったときは熱が出るって聞いたことあります。しょっくあぶそーばー？　が、いんえらすてぃっく？　に切り替わるとか……」
-　希海は顎に手を当て、しばし黙考する。<ruby>衝 撃 吸 収 機 構<rp>(</rp><rt>ショック・アブソーバー</rt><rp>)</rp></ruby>が<ruby>非 弾 性 式<rp>(</rp><rt>インエラスティック</rt><rp>)</rp></ruby>に……つまり運動時の衝撃を熱に変換して体外に捨てる仕組みになるということか。ここから先は全くの想像だが、おそらく普段は回生機構で運動時のエネルギーを回収していて、その方式では大きな衝撃が吸収しきれないのだろう。だから激しい運動をするときに切り替えが行う必要があるのだ。
+　希海は顎に手を当て、しばし黙考する。<ruby>衝 撃 吸 収 機 構<rp>《</rp><rt>ショック・アブソーバー</rt><rp>》</rp></ruby>が<ruby>非 弾 性 式<rp>《</rp><rt>インエラスティック</rt><rp>》</rp></ruby>に……つまり運動時の衝撃を熱に変換して体外に捨てる仕組みになるということか。ここから先は全くの想像だが、おそらく普段は回生機構で運動時のエネルギーを回収していて、その方式では大きな衝撃が吸収しきれないのだろう。だから激しい運動をするときに切り替えが行う必要があるのだ。
 「じゃあさ、走る？」
 「でも……」
 　リコはそう言って首からぶら下がるマフラーに視線を落とした。
@@ -159,7 +159,7 @@
 「真浜大学の高塚です」
 　――！！
 　その名を聞いた瞬間、心臓が冷たくなるのを希海はしっかりと感じた。
-　<ruby>高 塚 靖 友<rp>(</rp><rt>たかつかやすとも</rt><rp>)</rp></ruby>。真浜大学自然科学部の教授であり、希海の指導教官である。フルネームが頭をよぎると同時に、記憶の片隅に眠っていた顔が脳裏に蘇った。
+　<ruby>高 塚 靖 友<rp>《</rp><rt>たかつかやすとも</rt><rp>》</rp></ruby>。真浜大学自然科学部の教授であり、希海の指導教官である。フルネームが頭をよぎると同時に、記憶の片隅に眠っていた顔が脳裏に蘇った。
 「あ、ああ、あの……、え、えっと……」
 　あまりに突然すぎて何を言えば良いかが分からなかった。頭の中が真っ白になる、とは正にこのような状況のためにある言葉なのだろう。言い訳は愚か、電源を切ってそのまま逃げてしまいたいという願望すら浮かんでこない。
 「少し話があります。要件は……分かってますね」
