--- a/hardproblem/4-04.html
+++ b/hardproblem/4-04.html
@@ -51,7 +51,7 @@
 「……どうしようもないですね。これは因果応報です。ですが、今すぐにあなたを研究室から追い出すことが最良かというと、私はそうは思わない。指導教官としての責任というものがあります」
 　教官はそう言って、興味を失くしたように手元の資料に目を落とした。
 「明日から毎日、朝9時に来てください。もちろん休日もです。取り返しが付かないこととは言え、少しでもあなたに研究活動をしてもらうのが大学としての責任です。具体的な研究テーマは他の研究員と相談して決めておきます。いいですか、明日からの数ヶ月間、一日も休まずに大学へ来てください。わかりましたね」
-　視界が回る。思考が止まる。足が震える。心に<ruby>靄<rp>(</rp><rt>もや</rt><rp>)</rp></ruby>がかかる。鼻が詰まり、目頭に熱いものがこみ上げてくる。希海はその場に立ち尽くし、ただ、突きつけられた事実を必死に咀嚼することしかできない。
+　視界が回る。思考が止まる。足が震える。心に<ruby>靄<rp>《</rp><rt>もや</rt><rp>》</rp></ruby>がかかる。鼻が詰まり、目頭に熱いものがこみ上げてくる。希海はその場に立ち尽くし、ただ、突きつけられた事実を必死に咀嚼することしかできない。
 （嘘……でしょ……）
 　希海は何も言わずに頭を下げると、そのまま緩慢な動作で部屋の外へ出た。なるべく音を立てないように教授室の扉を閉めると、必死にこらえていた涙で視界が歪んでいく。
 （私は――――）
@@ -74,7 +74,7 @@
 　生まれも育ちも能力も、意思ですら自ら決められないというのに、どうして自分たちは泣いたり笑ったりしないといけないのだろう。どうして自分は、心なんてない機械に生まれなかったのだろう。
 　心とは、さながら扉のない部屋だ。窓の向こうにはときに醜く、ときに美しい世界が広がっているというのに、自分はその光景を部屋から眺めて泣いたり笑ったりすることしかできないのだ。いくら手を伸ばしても触れられず、どれだけ叫ぼうがその声が伝わることはない。まるで呪いだ、と希海は思った。
 　鼻先に冷たいものが触れる。
-　腫れたまぶたを開いて見てみると、ちらちらと舞い降りる白い雪が見えた。そういえば今日は雪が降ると言っていた。このまま地べたに寝っ転がっていると、風邪を引くくらいじゃ済まなくなるかもしれない。そんな考えが頭を過ったが、立ち上がろうとする気は一向に起きなかった。何もせず、ただひたすらに夜空を眺めていると、不意にその銀雲が途切れる。隙間から覗くのは、星ひとつない真っ黒な闇。一切の熱を吸い取ってなおその<ruby>輻射<rp>(</rp><rt>いろ</rt><rp>)</rp></ruby>を変えようとしない宇宙の黒だった。
+　腫れたまぶたを開いて見てみると、ちらちらと舞い降りる白い雪が見えた。そういえば今日は雪が降ると言っていた。このまま地べたに寝っ転がっていると、風邪を引くくらいじゃ済まなくなるかもしれない。そんな考えが頭を過ったが、立ち上がろうとする気は一向に起きなかった。何もせず、ただひたすらに夜空を眺めていると、不意にその銀雲が途切れる。隙間から覗くのは、星ひとつない真っ黒な闇。一切の熱を吸い取ってなおその<ruby>輻射<rp>《</rp><rt>いろ</rt><rp>》</rp></ruby>を変えようとしない宇宙の黒だった。
 </div>
 
     <div id="footer" v-component="hpot-page-footer"></div>
