--- a/hardproblem/5-01.html
+++ b/hardproblem/5-01.html
@@ -27,7 +27,7 @@
 「…………」
 　音の主である少女――リコは真剣な表情で数式と向かい合っていた。机の上に開いているのは高等数学の問題集。1ヶ月ほど前に買ってもらったものである。少女は書かれた問題文を眉一つ動かさずにゆっくりと読み込んでは、覚束ない調子でノートに数式を書き連ねていく。
 「……あれ？」
-　どう見てもおかしい計算結果がはじき出され、その整った顔立ちが少しだけ曇る。だが少女はめげる様子などつゆとも見せず、自らの記した計算過程を頭からつぶさに<ruby>検算<rp>(</rp><rt>チェック</rt><rp>)</rp></ruby>していく。
+　どう見てもおかしい計算結果がはじき出され、その整った顔立ちが少しだけ曇る。だが少女はめげる様子などつゆとも見せず、自らの記した計算過程を頭からつぶさに<ruby>検算<rp>《</rp><rt>チェック</rt><rp>》</rp></ruby>していく。
 　ここ数日、リコはずっとこんな様子だった。
 　時間ギリギリまで寝ていたい希海はあまり朝食を食べてくれないし、その希海が大学へ行ってしまっている以上、昼食の用意も必要なければ部屋もほとんど散らからない。掃除機をかけたところで狭い部屋なのですぐに終わってしまうし、洗うべき衣服だって一日に一人分しか出ない。そんなわけでリコはここ数日、暇を持て余してはこうして勉強を進めることにしていた。
 　かりかり、と規則的にペンを動かす音。
