--- a/hardproblem/5-02.html
+++ b/hardproblem/5-02.html
@@ -67,7 +67,7 @@
 　からん。
 　希海はレンゲを投げおくと、天津麻婆丼の最後の一口をお茶で強引に流し込み、気だるそうに席を立つ。トレイを返却口のコンベアに乗せ、食堂を出たところにある喫煙所でタバコを吹かして研究室に戻った。
 　その後30分ほど調べ物を再開してから実験室へと出向く。
-　今日の午後は<ruby>博士課程三年<rp>(</rp><rt>D　　　　　3</rt><rp>)</rp></ruby>の先輩と予備実験をすることになっている。その内容は「生体サンプルを有機結晶に付着させオルゴン場に曝露させておく」というもの。こう書けばすぐ終わりそうな作業に思えるが実際は結晶の開裂に手こずって数十分を消費するし、その後は数時間もかけて何度も何度も繰り返し薬品で洗浄とエッチング。それが終わったらサンプルを付着させ、専用の装置を調整しながら適切なオルゴン場の強度と勾配を調整してやらなければならない。すべてが終わる頃には夜の八時を回っていることだろう。
+　今日の午後は<ruby>博士課程三年<rp>《</rp><rt>D　　　　　3</rt><rp>》</rp></ruby>の先輩と予備実験をすることになっている。その内容は「生体サンプルを有機結晶に付着させオルゴン場に曝露させておく」というもの。こう書けばすぐ終わりそうな作業に思えるが実際は結晶の開裂に手こずって数十分を消費するし、その後は数時間もかけて何度も何度も繰り返し薬品で洗浄とエッチング。それが終わったらサンプルを付着させ、専用の装置を調整しながら適切なオルゴン場の強度と勾配を調整してやらなければならない。すべてが終わる頃には夜の八時を回っていることだろう。
 　慣れない結晶の開裂作業をイライラしながら何度もやり直し、ようやく終わらせる。次は有機結晶の浄化だ。専用の薬品に浸しながら超音波洗浄機で15分かけて表面の微細な汚れを落とすのを3周行う……という作業なのだが、この15分という時間がまた嫌らしい。本格的に調べ物や論文の執筆に充てるには短いし、かと言って何もせずただ待つには長すぎる。タバコを吸いに行こうにも二年前には確かにあったはずの喫煙所はいつの間にか失くなってしまっていたし、そもそもこの寒空の下わざわざ建物の外へ出る気にはなれなかった。
 「…………」
 　そして希海は仕方なく学生部屋のデスクでラップトップを広げ、ネットの掲示板をチェックしていた。何をするでもなく何を考えるでもなく、ただ怠惰にモニタに映し出される文字の羅列を目で追いかける。
