--- a/hardproblem/5-04.html
+++ b/hardproblem/5-04.html
@@ -111,9 +111,9 @@
 「ホントです！　私思い出したんです！　自分が誰で……自分が何をしていたのか……。どうしてあの時あそこに居て……、あのとき何をしようとしていたのか。全部……全部を思い出したんです！」
 　リコがやろうとしていたこと。
 　そういえばリコは――いや当時はまだ名前すら授けていなかった――あのとき出会ったロボットの少女は、確かに階段の踊り場で言っていた。自分には、やらなければならない事がある、と。
-「希海さん！　お願いです！　私を<ruby>天分<rp>(</rp><rt>てんぶ</rt><rp>)</rp></ruby>市まで連れて行って下さい！」
+「希海さん！　お願いです！　私を<ruby>天分<rp>《</rp><rt>てんぶ</rt><rp>》</rp></ruby>市まで連れて行って下さい！」
 「ちょっ、ちょっと……」
-「私はそこまでの行き方は分かりませんけど……。その天分市の……前に住んでた町の、<ruby>縁谷<rp>(</rp><rt>えにしだに</rt><rp>)</rp></ruby>っていう駅に行けばそこから先は分かるんです！　だからお願いします！」
+「私はそこまでの行き方は分かりませんけど……。その天分市の……前に住んでた町の、<ruby>縁谷<rp>《</rp><rt>えにしだに</rt><rp>》</rp></ruby>っていう駅に行けばそこから先は分かるんです！　だからお願いします！」
 「ちょ、ちょっと待って！　落ち着いてよ！」
 　顔と顔が触れそうなほどの距離にまで近づいていたリコを強引に引き離す。
 「確かに天分市まではこっからだとそう遠くはないけどさ……。そもそも、そこに何があるの？　前に住んでた場所だって言うけど、そこに行って一体何をするつもりなの？　その『やらなきゃいけないこと』って、なんなのよ？」
