--- a/hardproblem/5-05.html
+++ b/hardproblem/5-05.html
@@ -17,8 +17,8 @@
 　当日は朝七時に家を出た。
 　想定していたのよりもずいぶんと早い。すっかり早起きが板についてしまったのもそうだが、リコとふたりで部屋にいると息が詰まりそうだったからだ。
 　朝食だってとってない。そもそもリコが炊事をできるような状態ではなかったし、一切の言葉がないままに無言で箸を動かす自分の姿を想像すると食べずに出て正解だったと希海は思う。
-『まもなく6号線に快速<ruby>飾磨<rp>(</rp><rt>しかま</rt><rp>)</rp></ruby>行きが到着します』
-　そしてふたりは今、郊鉄の<ruby>御園<rp>(</rp><rt>みその</rt><rp>)</rp></ruby>駅で西行きの電車を待っている。すでにラッシュ時のピークを過ぎたとはいえ、平日の鉄道駅には沢山の人が行き交っていた。スーツを着たサラリーマンや気だるそうな様子で電車を待つ大学生、必死に単語帳とにらめっこする予備校生の姿もある。だがそんな往来の多さにも関わらず、言葉を交わす人間はごくわずかだ。誰もがプラットホームに響く足音に身を委ね、ただ無言で電車を待ち続ける一般的な平日朝の光景。そんなどこか異様でもある静けさをかき消すかのように、列車がレールのジョイント音を鳴らせて入線してくる。
+『まもなく6号線に快速<ruby>飾磨<rp>《</rp><rt>しかま</rt><rp>》</rp></ruby>行きが到着します』
+　そしてふたりは今、郊鉄の<ruby>御園<rp>《</rp><rt>みその</rt><rp>》</rp></ruby>駅で西行きの電車を待っている。すでにラッシュ時のピークを過ぎたとはいえ、平日の鉄道駅には沢山の人が行き交っていた。スーツを着たサラリーマンや気だるそうな様子で電車を待つ大学生、必死に単語帳とにらめっこする予備校生の姿もある。だがそんな往来の多さにも関わらず、言葉を交わす人間はごくわずかだ。誰もがプラットホームに響く足音に身を委ね、ただ無言で電車を待ち続ける一般的な平日朝の光景。そんなどこか異様でもある静けさをかき消すかのように、列車がレールのジョイント音を鳴らせて入線してくる。
 　車輪が嫌な軋みを響かせる中、希海はちらりと横に立った少女の様子を窺ってみる。くりっとした双眸が焦点を結ぶ場所はどこか遠い。
 　電車が止まり扉が開いた。
 　車内へ足を踏み入れるとそこにはむわっとした油臭い空気が立ち込めている。生暖かい人間の匂い。大嫌いな匂いだった。
@@ -33,7 +33,7 @@
 　リコの過去。かつての主人からもらった名前はハルカ。前の主人を自殺で亡くし、その後を追うように息を引き取った……。少女のことは色々と知っているつもりだったが、こうして列挙してみると、あらためて自分が何も知らなかったことに気付く。ハルカと主人の間に何があったのか、主人が死んでからハルカは――リコは一体何をしていたのか。
 　息苦しさが希海を襲う。その感情の正体は……多分、醜い嫉妬と独占欲なのだろう。リコの過去すらもすべて手中に収め、把握していないと気が済まない。そんな口に出すのも憚られるほど汚らしい情念。そしてそれが分かっていたからこそ希海は今に至るまでリコを強く問いただせないでいた。
 （…………暑い）
-　背中がうっすらと汗ばみ、顔が火照っている。空調が効きすぎだ。ちょうと湊川区を抜け、車内の人もまばらになってきた頃である。目的の<ruby>縁谷<rp>(</rp><rt>えにしだに</rt><rp>)</rp></ruby>駅まではもう大して時間もないが、せっかく人が少なくなってきたのだからコートを脱いでしまおう。そう思った希海はおもむろにその場から立ち上がり、上着のボタンを外し始める。そして左腕を袖に通しながらリコの方を窺うと、
+　背中がうっすらと汗ばみ、顔が火照っている。空調が効きすぎだ。ちょうと湊川区を抜け、車内の人もまばらになってきた頃である。目的の<ruby>縁谷<rp>《</rp><rt>えにしだに</rt><rp>》</rp></ruby>駅まではもう大して時間もないが、せっかく人が少なくなってきたのだからコートを脱いでしまおう。そう思った希海はおもむろにその場から立ち上がり、上着のボタンを外し始める。そして左腕を袖に通しながらリコの方を窺うと、
 　目が合った。
 　少女は相変わらず遠い目でコートを脱ごうとする希海をじっと見つめている。
 　――何をやってるんですか？
