--- a/hardproblem/5-06.html
+++ b/hardproblem/5-06.html
@@ -26,7 +26,7 @@
 　希海に続いて駅の外へ出たリコは昔を悼むかのように力なく目を伏せ、
 「あとはただ何もせず、ここから海を眺めてみたり」
 　そう言って少しだけ悲しそうに眼前の景色へ顔を向けるのだった。
-　国道を挟んだ向こう側には灰色の空と海が広がっている。ふたりが乗ってきた線路は海沿いを走っており、<ruby>縁谷<rp>(</rp><rt>えにしだに</rt><rp>)</rp></ruby>の駅舎を出たすぐそばには、どこまでも続いているかのような海岸線が広がっているのだった。
+　国道を挟んだ向こう側には灰色の空と海が広がっている。ふたりが乗ってきた線路は海沿いを走っており、<ruby>縁谷<rp>《</rp><rt>えにしだに</rt><rp>》</rp></ruby>の駅舎を出たすぐそばには、どこまでも続いているかのような海岸線が広がっているのだった。
 　リコはしばらくの間、何も言わずに海を眺めていた。
 　その眼差しは今にも波の音に飲まれてしまいそうなほどにおぼろげだ。このままでは目を離した隙にどこかへ消えてしまうのではないか。そんな焦燥感だけがひたすらに胸を焦がすが、いくら手を伸ばしたって絶対に届きっこないような遠い眼差し。
 「すいません。じゃあ……行きましょうか」
