--- a/hardproblem/5-07.html
+++ b/hardproblem/5-07.html
@@ -42,7 +42,7 @@
 　ちらりと横をうかがう。
 　座り込んだままのリコはもうずっと微動だにせず、まるで人形のようだった。鼻をすする音と擬似呼吸に合わせてゆっくりと上下する肩が、辛うじて少女が活動状態にあることを示している。
 　そんな少女の膝小僧。痛々しく擦りむいた傷口から一滴の赤い液体が滴った。血液……ではない。アンドロイドは生体活動に酸素を必要としないし、ましてや摂取した栄養を全身の細胞に送り出す必要もない。
-　その赤黒い液体が交換するのはガスや栄養分ではなく熱である。FIANCから生じる熱を全身にくまなく輸送し、ニューラルプロセッサを冷却すると同時に排熱を利用して肌の温かさを再現するための<ruby>末端熱交換液<rp>(</rp><rt>T - H E L</rt><rp>)</rp></ruby>。赤黒い色をしているのは人間の静脈血を模倣した単なるフェイクにすぎない。
+　その赤黒い液体が交換するのはガスや栄養分ではなく熱である。FIANCから生じる熱を全身にくまなく輸送し、ニューラルプロセッサを冷却すると同時に排熱を利用して肌の温かさを再現するための<ruby>末端熱交換液<rp>《</rp><rt>T - H E L</rt><rp>》</rp></ruby>。赤黒い色をしているのは人間の静脈血を模倣した単なるフェイクにすぎない。
 　希海ははたと思い立ち、ポケットからハンカチを取り出した。
 　この擬似血液は空気に触れて固化する性質があるものの、その下の破れてしまった皮膚が自然治癒することはない。つまりかさぶたは形成されるが、何かの拍子にそれが剥がれてしまえば再び血が流れ落ちる。そして擬似血液を失うということはFIANCの排熱機構が働かなくなるということであり、その行き着く先が脳死であることを希海は嫌というほど理解していた。
 　とは言え小さな傷である。たとえこのまま熱交換液を垂れ流したとしても、排熱機能に障害をきたすまでは数十日単位の猶予があるだろう。だが、たとえ小さな傷であっても擬似血液が外部に流出してしまった場合は速やかにサポートセンターに連絡を入れるように東から言われているし、何より傷口から砂埃が入るのは予期せぬ不具合の原因になりかねなかった。
@@ -57,7 +57,7 @@
 　不意を付かれた希海は間抜けな表情で聞き返すが、対する少女はそれに答えようとしない。
 「そ、それよりさ。リコそのケガ。ハンカチ巻いてあげるから膝を――」
 「私の記憶のことです」
-　低く鋭い、怒りと苛立ちの混ざったリコの声。その声色が指し示す<ruby>意味合い<rp>(</rp><rt>サ イ ン</rt><rp>)</rp></ruby>は……非難である。
+　低く鋭い、怒りと苛立ちの混ざったリコの声。その声色が指し示す<ruby>意味合い<rp>《</rp><rt>サ イ ン</rt><rp>》</rp></ruby>は……非難である。
 「ご、ごめん……。で、でもそれはリコの――」
 「私のため……ですか。私はそんなこと……頼んでないです。私が昔のこと知りたがってるって、希海さんだって分かって……ましたよね。私が望んでないって知っておきながら事実を隠してそれで……、それでどうなったんですか。それは本当に私のためだったんですか」
 　リコの言葉が鋭い刃となって希海を切り刻む。希海は何も答えられなかった。
