--- a/hardproblem/5-08.html
+++ b/hardproblem/5-08.html
@@ -44,12 +44,12 @@
 　心臓が跳ねた。
 　そうだ、私はリコを――。希海は電撃に打たれたようにその場から飛び起きる。床に手を突き体をバネのように起こすと、目に飛び込んできたのは薄暗い室内とひときわ鮮やかに輝く一つの窓。その向こうには目の覚めるような夏の空と青い海が広がっており、窓辺にはひとりのアンドロイドが言葉なく佇んでいる。そしてその少女の肩口に浮かぶのは、上下の角を互い違いに削りとられた黒い六角柱。
 「の、希海さん！？」
-　服が床を擦る音でようやく気が付いたのだろうか。リコはびくりと肩を震わせてこちらを振り返り、<ruby>核<rp>(</rp><rt>カーネル</rt><rp>)</rp></ruby>がその動きを追いかけるようになめらかな弧を描く。まさか希海がここに来るなんて思ってもみなかったのだろう。虹を閉じ込めた瞳には明らかな戸惑いの色が浮かんでいる。
+　服が床を擦る音でようやく気が付いたのだろうか。リコはびくりと肩を震わせてこちらを振り返り、<ruby>核<rp>《</rp><rt>カーネル</rt><rp>》</rp></ruby>がその動きを追いかけるようになめらかな弧を描く。まさか希海がここに来るなんて思ってもみなかったのだろう。虹を閉じ込めた瞳には明らかな戸惑いの色が浮かんでいる。
 「え、えっと……」
 　反射的に飛び起きた希海だったが、続く言葉が出てこない。少女の瞳の奥に揺らめく虹を見た瞬間、それまで考えていたセリフはすべてどこかへ消え去ってしまっていた。
 「何をしに……来たんですか」
 　次に口を開いたのはリコだった。
-　何をしに来たのか。その言葉に、つい数時間ほど前の光景が頭をよぎる。呼び鈴を押そうとして力なく降りていった右手。擦りむいた膝から滴る赤黒い<ruby>末端熱交換液<rp>(</rp><rt>T - H E L</rt><rp>)</rp></ruby>と、何も言わないリコ。怒鳴り散らしてしまった自分と、そんなリコを置いてどこかへ行ってしまった自分。思い出すだけで内蔵がかき乱され、今にもえずきそうになる。足が震えだし、ここから逃げ出せと声高に叫ぶ。さっさと帰ろうと、もうこんなストレスはこりごりだと叫び散らす。
+　何をしに来たのか。その言葉に、つい数時間ほど前の光景が頭をよぎる。呼び鈴を押そうとして力なく降りていった右手。擦りむいた膝から滴る赤黒い<ruby>末端熱交換液<rp>《</rp><rt>T - H E L</rt><rp>》</rp></ruby>と、何も言わないリコ。怒鳴り散らしてしまった自分と、そんなリコを置いてどこかへ行ってしまった自分。思い出すだけで内蔵がかき乱され、今にもえずきそうになる。足が震えだし、ここから逃げ出せと声高に叫ぶ。さっさと帰ろうと、もうこんなストレスはこりごりだと叫び散らす。
 （うるさい……！）
 　手のひらに爪を食い込ませ、全身からのシグナルを必死で遮断する。確かに希海は弱い。リコにごめんねと謝るただそれだけのことにここまで強い恐怖を抱いてしまうほどの弱い人間で、そのせいでずっと大学にも行けなかった。いや、それも結局は強制的に連れ戻されただけで最後まで自分一人では何ひとつできなかった。自身の愚かさは嫌というほどに自覚している。
 　だが、今回だけは別だ。自分はリコを……、あんな辛い目にあったリコに手を差し伸べるどころかひどい仕打ちで傷付けてしまった。大学なんていう希海だけの問題とはわけが違う。だから謝らなければ。ここで謝ってリコを連れて帰らなければ自分は……本当に最低な人間になってしまう。もう二度と……立ち上がれなくなってしまう。
@@ -88,9 +88,9 @@
 　だが、六畳ちょっとの狭い部屋には投げつけられそうなものはそう多くはない。本棚に整然と並べられた書籍の類は不可能。セルロース相手だとほとんど力が出せないからだ。木製の机やベッド……これもだめ。布団……まさか。
 　そんな舐めるような希海の目がある一点で止まった。窓の外の光を背負って立つ少女の手元。窓辺に置かれた鉢植えの花である。これなら重さも申し分ない。
 「私も中学校の頃、リコと同じようにこういう場所へ来ちゃったことがあってさ」
-　得物を決めた希海は声を押し殺してリコに語りかける。もう一度リコに帰る気があるのかを問い、それでも帰還を拒否するのであれば……即座にこれを<ruby>核<rp>(</rp><rt>カーネル</rt><rp>)</rp></ruby>に向かって投げつけなければ。
+　得物を決めた希海は声を押し殺してリコに語りかける。もう一度リコに帰る気があるのかを問い、それでも帰還を拒否するのであれば……即座にこれを<ruby>核<rp>《</rp><rt>カーネル</rt><rp>》</rp></ruby>に向かって投げつけなければ。
 「全部嫌になっちゃったっていうリコの気持ちは私もよく分かるけど……。でもさ、きっと生きてたら何かいいことあると思う」
-　ひとたび決意すると膝が震えだす。そんな自身の内の臆病さから目をそらすように、希海はあえて楽天的な素振りで話を続けた。本当なら形式的な問いかけなどなしに、不意打ちで<ruby>核<rp>(</rp><rt>カーネル</rt><rp>)</rp></ruby>を破壊すれば良かったのだろう。だがその方法はリコに対する裏切りのような気がしてしまって希海にはどうしてもできなかった。
+　ひとたび決意すると膝が震えだす。そんな自身の内の臆病さから目をそらすように、希海はあえて楽天的な素振りで話を続けた。本当なら形式的な問いかけなどなしに、不意打ちで<ruby>核<rp>《</rp><rt>カーネル</rt><rp>》</rp></ruby>を破壊すれば良かったのだろう。だがその方法はリコに対する裏切りのような気がしてしまって希海にはどうしてもできなかった。
 「たぶんこれはロボットもそうなんだけど、人間ってわりと鈍感にできてるもんでさ。ちょっとつらいことがあっても、一年や二年もすれば意外と忘れちゃうんだと思う。だから……」
 　そしてそれが裏目だった。
 「勝手なこと言わないでください！」
@@ -112,14 +112,14 @@
 「そう……でした。希海さんもそういうことができるんですね。でも……私にだって……」
 　低く冷たいリコの視線と声色。場の緊張が一気に高まっていく。
 「それはちょうど夢の中みたいで……。一度も飛んだことがないのに、空を飛べるって何故か知っているのと同じで……」
-　まるで独り言のような、誰に向けるでもないリコの言葉。その透き通った声を受けて<ruby>核<rp>(</rp><rt>カーネル</rt><rp>)</rp></ruby>がびくりと脈動した。少女の肩口に浮かぶ黒い六角柱。その辺の一つ一つが見る見るうちに折れ曲がり繋がってゆく。
+　まるで独り言のような、誰に向けるでもないリコの言葉。その透き通った声を受けて<ruby>核<rp>《</rp><rt>カーネル</rt><rp>》</rp></ruby>がびくりと脈動した。少女の肩口に浮かぶ黒い六角柱。その辺の一つ一つが見る見るうちに折れ曲がり繋がってゆく。
 　まずい。
-　希海は慌てて手元に浮かべてあった植木鉢を掴み、<ruby>核<rp>(</rp><rt>カーネル</rt><rp>)</rp></ruby>に向かって投げつけた。1000本の矢の3分の1近くを対象に作用させ、半数以上の矢で床に踏ん張りを効かせる。鉢を加速させる矢と反作用を打ち消す矢の数が同じでないのは、床と鉢で作用係数が異なるからだ。本来ならば別の何かで踏ん張りを効かせる方が効果的であるが、そんなものを探している暇があるなら一刻も早く攻撃をした方がいい。そんな判断だった。
+　希海は慌てて手元に浮かべてあった植木鉢を掴み、<ruby>核<rp>《</rp><rt>カーネル</rt><rp>》</rp></ruby>に向かって投げつけた。1000本の矢の3分の1近くを対象に作用させ、半数以上の矢で床に踏ん張りを効かせる。鉢を加速させる矢と反作用を打ち消す矢の数が同じでないのは、床と鉢で作用係数が異なるからだ。本来ならば別の何かで踏ん張りを効かせる方が効果的であるが、そんなものを探している暇があるなら一刻も早く攻撃をした方がいい。そんな判断だった。
 　希海の指を離れた植木鉢は幾百もの矢に押されて一瞬の内に加速する。だがその弾丸が目標を撃ちぬくよりほんの少しだけ早く、
-　<ruby>核<rp>(</rp><rt>カーネル</rt><rp>)</rp></ruby>が光った。
+　<ruby>核<rp>《</rp><rt>カーネル</rt><rp>》</rp></ruby>が光った。
 　まるで溶鉱炉のようなオレンジと赤の混ざった光。希海の網膜がその輝きを捉えたその直後、一瞬遅れてパルスのような突風が全身に叩きつけられた。
 　暗転する視界。背中に走る重い衝撃。
-　気付いたときには壁際まで吹き飛ばされてうずくまっていた。慌てて立ち上がった希海の目に飛び込んできたものは、相変わらず窓辺に佇む少女とその肩口で踊るように自転する真っ黒な<ruby>正四面体対称<rp>(</rp><rt>テ ト ラ ヘ ド ラ ル</rt><rp>)</rp></ruby>の立体物。角の落ちた六角柱だったはずのそれは、今や海辺の消波ブロックのような形状に変貌してしまっている。
+　気付いたときには壁際まで吹き飛ばされてうずくまっていた。慌てて立ち上がった希海の目に飛び込んできたものは、相変わらず窓辺に佇む少女とその肩口で踊るように自転する真っ黒な<ruby>正四面体対称<rp>《</rp><rt>テ ト ラ ヘ ド ラ ル</rt><rp>》</rp></ruby>の立体物。角の落ちた六角柱だったはずのそれは、今や海辺の消波ブロックのような形状に変貌してしまっている。
 「……これが私の使える力です」
 　植木鉢は床に落ちて粉々に砕け散ってしまっている。一体何が起こったのか、希海にはまったく分からなかった。
 「だから……何なのよ。私だって伊達に3年間もこんなことしてたわけじゃない」
@@ -132,16 +132,16 @@
 「試してみる？」
 　希海はそう言って一層冷たい目でリコを突き刺した。そして数秒の間、にらみ合いの時間が続き、
 　希海が突如として動いた。
-　自らの周りを周回していた植木鉢の破片をでたらめに散らばらせ、その一つ一つをリコの体に向けて飛ばす。さながら無数の隕石が天体という<ruby>重力の井戸<rp>(</rp><rt>ポテンシャルウェル</rt><rp>)</rp></ruby>に落ちていくように、破片がでたらめな軌道を描いて速度を上げた。その加速度は先ほどの比ではない。なぜなら一個の物体を投げつけるときとは違い、今回は一つ一つを異なる方向から押しているからだ。すなわち<ruby>力<rp>(</rp><rt>ベクトル</rt><rp>)</rp></ruby>の<ruby>総 和<rp>(</rp><rt>サメーション</rt><rp>)</rp></ruby>はほとんどゼロに等しく希海の体に反作用は生じない。反作用が生じなければそれを<ruby>相殺<rp>(</rp><rt>キャンセル</rt><rp>)</rp></ruby>するために使っていた矢の全てを物体の加速に費やせる。これはまさに希海の奥の手。<ruby>核<rp>(</rp><rt>カーネル</rt><rp>)</rp></ruby>ではなく肉体を破壊することで相手を行動不能に至らしめるという、出来れば使いたくなかった禁じ手だ。
+　自らの周りを周回していた植木鉢の破片をでたらめに散らばらせ、その一つ一つをリコの体に向けて飛ばす。さながら無数の隕石が天体という<ruby>重力の井戸<rp>《</rp><rt>ポテンシャルウェル</rt><rp>》</rp></ruby>に落ちていくように、破片がでたらめな軌道を描いて速度を上げた。その加速度は先ほどの比ではない。なぜなら一個の物体を投げつけるときとは違い、今回は一つ一つを異なる方向から押しているからだ。すなわち<ruby>力<rp>《</rp><rt>ベクトル</rt><rp>》</rp></ruby>の<ruby>総 和<rp>《</rp><rt>サメーション</rt><rp>》</rp></ruby>はほとんどゼロに等しく希海の体に反作用は生じない。反作用が生じなければそれを<ruby>相殺<rp>《</rp><rt>キャンセル</rt><rp>》</rp></ruby>するために使っていた矢の全てを物体の加速に費やせる。これはまさに希海の奥の手。<ruby>核<rp>《</rp><rt>カーネル</rt><rp>》</rp></ruby>ではなく肉体を破壊することで相手を行動不能に至らしめるという、出来れば使いたくなかった禁じ手だ。
 　1000の矢のすべてからエネルギーを受けとった破片は一瞬の内に目で追い切れないほどの速度に達する。狙うは顔や喉元。もちろん本気でリコを傷付けるつもりなんてこれっぽっちもない。破片がその柔肌を切り裂く寸前のところで止めるつもりだ。そして寸止めで終わらせるからこそ、手加減をしてはならなかった。相手に恐怖を植え付け、徹底的に力の差を見せつけなければ戦意を砕くことはできない。
 　四方八方から弾丸のような速度で向かってくる幾つもの鋭利な刃物。だがそんな渦中の人間に恐怖を与えるような光景にもリコは微動だにしない。少女はただじっとその場に立ち尽くしたまま周囲の破片をちらりと一瞥すると、
 　唇を小さく動かした。
-　<ruby>核<rp>(</rp><rt>カーネル</rt><rp>)</rp></ruby>が赤く嘶き、リコを中心として渦を巻いた分厚い気流が生じる。その旋風が破片に触れたと思った次の瞬間、遠隔作用の手応えが消えた。
+　<ruby>核<rp>《</rp><rt>カーネル</rt><rp>》</rp></ruby>が赤く嘶き、リコを中心として渦を巻いた分厚い気流が生じる。その旋風が破片に触れたと思った次の瞬間、遠隔作用の手応えが消えた。
 「なっ……！？」
 　そしてコントロールを離れた破片は慣性という物理学上の基礎概念すら忘れてしまったかのようにその場へ落下してまう。何が起きたのかまったく理解できなかった。
 「ほら、言ったでしょう」
 　ぽとぽとと力なく落ちるいくつもの花瓶の欠片。リコはそんな破片に目もくれず、すこしだけ苦そうな顔で希海を見据える。
-「この風はすべてを消し去ることができます。力とか夢とか心とか……そういう熱を帯びたあらゆる<ruby>灯<rp>(</rp><rt>ともしび</rt><rp>)</rp></ruby>を吹き消すことができる、そういう風なんです。だから希海さんが何をしようとも勝ち目なんて……」
+「この風はすべてを消し去ることができます。力とか夢とか心とか……そういう熱を帯びたあらゆる<ruby>灯<rp>《</rp><rt>ともしび</rt><rp>》</rp></ruby>を吹き消すことができる、そういう風なんです。だから希海さんが何をしようとも勝ち目なんて……」
 　言葉が尻すぼみになって消えていく。まるで自分の無力さを語っているかのように悲しい声色。
 「だから、諦めてください。私に帰るつもりはありませんし、希海さんが力づくで連れて帰ろうとも無理なんです」
 「……嫌だって言ったら？」
@@ -149,13 +149,13 @@
 「分かりました」
 　リコの小さなため息。
 「じゃあ、こちらとしても力づくで戻ってもらうしかありません」
-　少女がゆっくりと手を上げると、三度<ruby>核<rp>(</rp><rt>カーネル</rt><rp>)</rp></ruby>が赤熱した。まずい。このままでは本当に負けてしまう。そう考えた希海は反射的にその場から飛び退き、リコに背を向けて玄関のある方向へと向き直る。
+　少女がゆっくりと手を上げると、三度<ruby>核<rp>《</rp><rt>カーネル</rt><rp>》</rp></ruby>が赤熱した。まずい。このままでは本当に負けてしまう。そう考えた希海は反射的にその場から飛び退き、リコに背を向けて玄関のある方向へと向き直る。
 　ここから出なければ。この狭苦しい部屋に居てはリコの風を真正面から受けざるを得ない。投げるものだってない。広い場所へ、風を遮るものが沢山あってリコから距離をとれる場所へ出なければ。投げつけるものに困らなければなお良い。だが、そんな希海の算段は次の瞬間にあえなく叩き割られてしまう。
 　振り返った先にあったものは壁だった。てっきり外へ通じる出入口が背後にあると思っていたのに。そして周囲の景色を見渡した瞬間、もはや手が付けられないほどに膨れ上がっていた焦燥が絶望に変わった。
 「な、なによこれ……！？」
 　出入口が無いのは後ろ側だけではない。部屋の左にはベッドと壁に掛けられたカレンダー。右には綺麗に整頓された本棚と木製の机。この場所にはいくら見渡しても外へ通じる扉が存在しなかった。
 「がっ……！」
-　戸惑う希海の背中に突風が吹きつけた。カエルみたいな姿勢で正面から壁に叩きつけられ視界が一瞬<ruby>暗 転<rp>(</rp><rt>ブラックアウト</rt><rp>)</rp></ruby>する。地面に這いつくばったまま風の吹いてきた方向を見ると、一枚の大きな窓とその傍らに立ってこちらを眺めるリコの姿。その表情は背後に広がる冗談みたいに鮮やかな景色とは正反対で、まるで雪の結晶ように冷たく今にも溶けて消えてしまいそうだった。
+　戸惑う希海の背中に突風が吹きつけた。カエルみたいな姿勢で正面から壁に叩きつけられ視界が一瞬<ruby>暗 転<rp>《</rp><rt>ブラックアウト</rt><rp>》</rp></ruby>する。地面に這いつくばったまま風の吹いてきた方向を見ると、一枚の大きな窓とその傍らに立ってこちらを眺めるリコの姿。その表情は背後に広がる冗談みたいに鮮やかな景色とは正反対で、まるで雪の結晶ように冷たく今にも溶けて消えてしまいそうだった。
 「希海さん……いい加減に分かってください。もう無理なんです。私に帰るつもりはありませんし、希海さんにできることもありません」
 　きらびやかな明るい外の世界と仄暗いモノトーンの室内。その陰影の差はあまりにハイコントラストであまりに悲しい。この狭い六畳間がリコの精神空間の全てなのだろうか。リコはここでこれからずっとひとりで生きていくのだろうか。
 「そんなの私は……」
@@ -163,7 +163,7 @@
 「どうして？　どうしてリコがこんな場所にずっと居なきゃいけないの？　どうして一緒に帰ってくれないの？　私は……私はどうすればいいの？　リコが居ないと私……」
 　そして希海は折れた。手を突いて立ち上がろうとしても膝に力が入らなかった。自分本位な言葉が口からこぼれてくる。そんな惨めな希海を見下ろす瞳の中の虹は、今までで一番悲しそうに揺らめいている。
 「ごめんなさい……本当にごめんなさい。でももう……決めたことですから」
-　リコはそっと目を閉じて右手を前に突き出した。<ruby>核<rp>(</rp><rt>カーネル</rt><rp>)</rp></ruby>が赤く輝き吹雪のように冷たい風が希海に吹き付ける。反射的に腕で顔を覆ってみたが、そんなことをしても無駄だった。なぜなら吹き荒れる風に含まれるのがでたらめなオルゴンの<ruby>雑音<rp>(</rp><rt>ノイズ</rt><rp>)</rp></ruby>だから。その<ruby>雑音<rp>(</rp><rt>ノイズ</rt><rp>)</rp></ruby>は希海の脳に張られたオルゴンのベールを、自己組織化によって体温から微小管内の量子状態を保護しているベールを剥ぎとっていく。
+　リコはそっと目を閉じて右手を前に突き出した。<ruby>核<rp>《</rp><rt>カーネル</rt><rp>》</rp></ruby>が赤く輝き吹雪のように冷たい風が希海に吹き付ける。反射的に腕で顔を覆ってみたが、そんなことをしても無駄だった。なぜなら吹き荒れる風に含まれるのがでたらめなオルゴンの<ruby>雑音<rp>《</rp><rt>ノイズ</rt><rp>》</rp></ruby>だから。その<ruby>雑音<rp>《</rp><rt>ノイズ</rt><rp>》</rp></ruby>は希海の脳に張られたオルゴンのベールを、自己組織化によって体温から微小管内の量子状態を保護しているベールを剥ぎとっていく。
 「さようなら……希海さん」
 　闇に沈む五感が最後にとらえたのは、リコのそんな言葉だった。
 </div>
