--- a/hardproblem/2-03.html
+++ b/hardproblem/2-03.html
@@ -16,7 +16,7 @@
 <div class="text">
 　その日はあっという間に訪れた。最初の5日で行く場所を決め、次の5日で段取りを組んだ。その次の5日で買い物を終えると、最後の1日は心を踊らせて待つだけだった。
 「わぁ！　見てください希海さん！　海ですよ海！」
-　<ruby>特急列車<rp>(</rp><rt>インターシティ</rt><rp>)</rp></ruby>がトンネルを抜け、太陽の光がボックスシートに差し込む。もうさっきから窓ガラスに張り付いたままの少女が、眼前の光景に目を輝かせた。電車が<ruby>海名<rp>(</rp><rt>かいめい</rt><rp>)</rp></ruby>駅でスイッチバックをしてからというものの、リコはずっとこの調子である。海が現れるたびに窓へ張り付いては、キャッキャと楽しそうに騒ぎ出す。
+　<ruby>特急列車<rp>《</rp><rt>インターシティ</rt><rp>》</rp></ruby>がトンネルを抜け、太陽の光がボックスシートに差し込む。もうさっきから窓ガラスに張り付いたままの少女が、眼前の光景に目を輝かせた。電車が<ruby>海名<rp>《</rp><rt>かいめい</rt><rp>》</rp></ruby>駅でスイッチバックをしてからというものの、リコはずっとこの調子である。海が現れるたびに窓へ張り付いては、キャッキャと楽しそうに騒ぎ出す。
 「あんた、さっきから何回それ言ってるのよ」
 　希海は呆れ顔で手元の携帯ゲーム機から顔を上げた。
 「今度のはホントにすごいんですから。ほら希海さんも見てください」
@@ -32,7 +32,7 @@
 　アレとはリコ特製のてるてる坊主たちのことだ。結局、いつの時代も最後は神頼みである。予報を知った日から毎晩1体、作っては吊るし、作っては吊るし……。窓の外に並んだてるてる坊主は、今朝の時点で7体に及んでいた。
 「ふふっ、そうかも知れませんね。でも希海さんの――」
 　不意にスピーカーから電子音が鳴り響く。和音のない、簡素で古臭いメーデー歌。鉄道省特有の到着予告チャイムである。
-『本日も、共和国鉄道をご利用いただきましてありがとうございます。まもなく<ruby>浜木<rp>(</rp><rt>まはぎ</rt><rp>)</rp></ruby>、<ruby>浜木<rp>(</rp><rt>まはぎ</rt><rp>)</rp></ruby>です』
+『本日も、共和国鉄道をご利用いただきましてありがとうございます。まもなく<ruby>浜木<rp>《</rp><rt>まはぎ</rt><rp>》</rp></ruby>、<ruby>浜木<rp>《</rp><rt>まはぎ</rt><rp>》</rp></ruby>です』
 　聞き取りやすい滑らかな女性の声。10年ほど前から一般的になった合成音声だ。
 「あ、そろそろみたいよ。荷物下ろそ？」
 　アナウンスを聞くやいなや、希海は背伸びをして網棚のショルダーバッグに両手を伸ばした。肩紐を引っ張ると重心の支えを失ったバッグが、希海の体にずしりとのしかかってくる。
@@ -40,8 +40,8 @@
 　当初は水着くらいしか持ってくるつもりはなかったが、あれもこれもと詰め込んでいるうちに随分と重たくなってしまった。流石にスイカは持ってこなかったものの、ゴーグルにシュノーケルに折りたたみの椅子。浮き輪に日焼け止めと盛りだくさんである。
 「あっ、代わりますよ」
 「いや、まだ大丈夫……だと思う。しんどくなったら代わってもらうから、そのときはよろしくね」
-　電車が駅に着くと、ふたりは荷物を抱えていそいそと席を離れた。タラップを慎重に降りてホームに降り立つと、濃厚な夏の気配が出迎えてくれる。クーラーに慣れた体を溶かすようなべっとりとまとわりつく熱気に、ジワジワと降り注いでは耳鳴りのように反響する蝉の声。鼻孔に感じる<ruby>微<rp>(</rp><rt>かす</rt><rp>)</rp></ruby>かな磯の香りが、否が応にも海の近さを実感させてくれた。
-「<ruby>暑<rp>(</rp><rt>あっつ</rt><rp>)</rp></ruby>……」
+　電車が駅に着くと、ふたりは荷物を抱えていそいそと席を離れた。タラップを慎重に降りてホームに降り立つと、濃厚な夏の気配が出迎えてくれる。クーラーに慣れた体を溶かすようなべっとりとまとわりつく熱気に、ジワジワと降り注いでは耳鳴りのように反響する蝉の声。鼻孔に感じる<ruby>微<rp>《</rp><rt>かす</rt><rp>》</rp></ruby>かな磯の香りが、否が応にも海の近さを実感させてくれた。
+「<ruby>暑<rp>《</rp><rt>あっつ</rt><rp>》</rp></ruby>……」
 　肌を焼く強烈な日光に、一分と待たずして汗が吹き出てくる。
 「ところでさ」
 「はい？」
@@ -91,7 +91,7 @@
 「それじゃあ、楽しんでいってくださいね」
 　運転手はそう言って車を発進させると細い路地に入り込み、元来た方向へと帰っていった。おそらく駅前で再び客を待つのだろう。エンジン音が行楽地の喧騒にかき消されていく。
 「さて、と……」
-　希海は一つ大きく息を吸う。塩気を含んだ粘り気のある空気。眼前には白い砂浜と、果ての見えない海と空。まだ午前中だというのに、太陽は強烈な紫外線で肌をじりじりと焼いてくる。アスファルトの上では、立ち昇る<ruby>陽炎<rp>(</rp><rt>かげろう</rt><rp>)</rp></ruby>が蒸気のように揺らめいていた。
+　希海は一つ大きく息を吸う。塩気を含んだ粘り気のある空気。眼前には白い砂浜と、果ての見えない海と空。まだ午前中だというのに、太陽は強烈な紫外線で肌をじりじりと焼いてくる。アスファルトの上では、立ち昇る<ruby>陽炎<rp>《</rp><rt>かげろう</rt><rp>》</rp></ruby>が蒸気のように揺らめいていた。
 「……着いたわね」
 「着きましたね」
 　目の前に広がる壮大な景色に、思わず胸が高鳴ってくる。肺の奥底がむずむずして、はやる気持ちが抑えきれない。
