--- a/hardproblem/2-06.html
+++ b/hardproblem/2-06.html
@@ -25,8 +25,8 @@
 
 　案の定買い物だったようだ。22時ごろに帰ると書いてあるので、もうそろそろ戻ってくる頃だろう。
 「ん……？」
-　メモを置こうとして気付いた。机の上になぜか大学の教科書が置いてある。『<ruby>ラ イ リ ー 量 子 精 神 力 学 入 門<rp>(</rp><rt>Riley Introduction to Quantum Orgomechanics</rt><rp>)</rp></ruby>』。3回生の頃に買ったはいいが、ろくに読まず本棚の肥やしになっていたものだ。おかしいな、と希海は首をかしげた。こんなの最近読んだだろうか？
-　ずっしりと重いハードカバーの教科書を手に取り、ぱらぱらとめくってみる。内容は相変わらず意味が分からなかった。ページを埋め尽くす難解な数式と、重量感のある<ruby>厳<rp>(</rp><rt>いかめ</rt><rp>)</rp></ruby>しい装丁。この手の教科書を開くとまるで魔導書でも読んでいるかのような気分になれる。もちろん、そこに記されているのは禁断の術式ではなく理論家による地道な考察を経て作られた数式であり、ところどころに記載されている図は魔法陣ならぬ反応過程を表すダイアグラムである。だが内容を理解していない希海にとって両者はまったく同じものと言っても過言ではない。
+　メモを置こうとして気付いた。机の上になぜか大学の教科書が置いてある。『<ruby>ラ イ リ ー 量 子 精 神 力 学 入 門<rp>《</rp><rt>Riley Introduction to Quantum Orgomechanics</rt><rp>》</rp></ruby>』。3回生の頃に買ったはいいが、ろくに読まず本棚の肥やしになっていたものだ。おかしいな、と希海は首をかしげた。こんなの最近読んだだろうか？
+　ずっしりと重いハードカバーの教科書を手に取り、ぱらぱらとめくってみる。内容は相変わらず意味が分からなかった。ページを埋め尽くす難解な数式と、重量感のある<ruby>厳<rp>《</rp><rt>いかめ</rt><rp>》</rp></ruby>しい装丁。この手の教科書を開くとまるで魔導書でも読んでいるかのような気分になれる。もちろん、そこに記されているのは禁断の術式ではなく理論家による地道な考察を経て作られた数式であり、ところどころに記載されている図は魔法陣ならぬ反応過程を表すダイアグラムである。だが内容を理解していない希海にとって両者はまったく同じものと言っても過言ではない。
 　魔導書、もとい教科書を片手に持つと、希海はそのまま右手を突き出して呪文でも唱えるふりをしてみる。とは言ってもオカルトチックな呪文など知らないのでゲームに登場する攻撃魔法で代用するのだが。
 　がちゃり、と鍵の開く音。
 　どうやらリコが帰ってきたらしい。希海は慌てて教科書を閉じると、さも何もしていなかったかのように扉が開くのを見計らって声を掛けた。
@@ -50,11 +50,11 @@
 　紙面の上で嬉しそうに視線を滑らせるリコ。たしかに、この手の教科書には、普通に生活していればまずお目にかかることがないような記号がたくさん出てくる。
 「このフォークみたいな字は何ですか？」
 　リコが教科書の一文を指さして言った。フォーク？　一体何のことを言っているのだろう。皆目見当もつかない表現だ。疑問を抱えながら教科書を覗き込んだ希海は、「なるほどフォークか」と納得する。
-「ああ、これは<ruby><span class="times">Ψ</span><rp>(</rp><rt>プサイ</rt><rp>)</rp></ruby>っていうギリシャ文字よ。波動関数を表す記号」
+「ああ、これは<ruby><span class="times">Ψ</span><rp>《</rp><rt>プサイ</rt><rp>》</rp></ruby>っていうギリシャ文字よ。波動関数を表す記号」
 「このくるくるしてるのは？」
 「ハミルトニアン。系のエネルギーを表す演算子で、くるくるしてるのはHの花文字ね」
 「この十字架は？」
-「十字架じゃなくて<ruby>短剣符<rp>(</rp><rt>ダガー</rt><rp>)</rp></ruby>。<ruby>転置複素<rp>(</rp><rt>エルミート</rt><rp>)</rp></ruby>共役って意味よ」
+「十字架じゃなくて<ruby>短剣符<rp>《</rp><rt>ダガー</rt><rp>》</rp></ruby>。<ruby>転置複素<rp>《</rp><rt>エルミート</rt><rp>》</rp></ruby>共役って意味よ」
 「……ぜんぜんわかんないです」
 「大丈夫、私もよくわかってないから」
 　しばらくの間、リコと一緒に教科書をじっと眺めていた。まるで呪文のように映る難解な数式と解説文たち。講義でやったときは『なんとなく』程度に理解していたが、今となっては単なる模様にしか見えない。この一年で大幅に劣化してしまった自分の知力をまざまざと実感させられた気がした。
@@ -63,7 +63,7 @@
 「もしよかったらさ、教えてあげようか？」
 　だから希海はそう言った。もちろん、希海だってこの本の内容などまったくもって理解できていない。だが、教科書を読むために必要な前提知識くらいなら、何とか教えてやれるはずだ。
 「ほっ、ホントですか……？」
-　リコは目に輝きが灯った。新しい<ruby>玩具<rp>(</rp><rt>おもちゃ</rt><rp>)</rp></ruby>で遊んでやったときの子犬のような表情。もう何度も見た光景である。
+　リコは目に輝きが灯った。新しい<ruby>玩具<rp>《</rp><rt>おもちゃ</rt><rp>》</rp></ruby>で遊んでやったときの子犬のような表情。もう何度も見た光景である。
 「あっ、あんまり期待しないでよ。あくまで読み始める前の段階までだからね。私が教えれるのは」
 「はいっ！　希海さん、ありがとうございます！」
 　そう言って満面の笑みでこたえるリコ。今日も元気いっぱいだ。いつだってこの子は子供のように、見るものすべてに興味を示す。
