--- a/hardproblem/3-05.html
+++ b/hardproblem/3-05.html
@@ -89,7 +89,7 @@
 　所詮は誰が書いたのかも分からぬネットの情報だ。ひょっとすると全くのデマか都市伝説なのかもしれない。かすかに残っていたそんな可能性は無情にも棄却され、希海の鼓動がまた少しその速さを増していく。
 「だが君の推測は違う。アンドロイドに恋愛感情を持たせている理由も、リコに性器を実装している理由も、決して物好きな“顧客”のニーズを満たすためではない」
 　それきた。東のやりそうな論法だ。
-　君の認識は部分的に正しい、だが、一部に重大な瑕疵があり、それが原因で君はまちがった結論を導き出してしまっている。この男はそう言いたいのだ。希海は東の言葉にいっそう強く注意を向ける。自分はいま詐欺師か、さもなくば手品師と話をしているのだ。その言葉の裏に隠された巧妙な<ruby>詭弁<rp>(</rp><rt>トリック</rt><rp>)</rp></ruby>を見抜けなければ、いとも簡単に騙されてしまう。そんな気がした。
+　君の認識は部分的に正しい、だが、一部に重大な瑕疵があり、それが原因で君はまちがった結論を導き出してしまっている。この男はそう言いたいのだ。希海は東の言葉にいっそう強く注意を向ける。自分はいま詐欺師か、さもなくば手品師と話をしているのだ。その言葉の裏に隠された巧妙な<ruby>詭弁<rp>《</rp><rt>トリック</rt><rp>》</rp></ruby>を見抜けなければ、いとも簡単に騙されてしまう。そんな気がした。
 「そもそも関連企業で生産しているセクサロイドに、恋愛感情を始めとする、高度な感情機能は実装されていない。これは倫理的な理由からだ。彼ら彼女らはただ、自らを律する列挙的なアルゴリズムに従って状況を判断し“作業”を行うのみだ。さながら工場のロボットのようにね」
 　なるほど。いかにもそれらしい話だ。工学理論や企業の内実を知らない希海には真偽の判断ができない話であるのが、また嫌らしい。だが騙されるものかと希海は思う。
 「じゃあどうして、リコたち普通のロボットに恋愛機能や性器なんてものが実装されているんですか？　機械にそんなもの持たせて、一体どういうメリットがあるんですか」
